--- a/lifecycle-data/products/azure-scheduler.yml
+++ b/lifecycle-data/products/azure-scheduler.yml
@@ -1,17 +1,17 @@
 ### YamlMime:Lifecycle
 metadata:
-  title: Azure-planner
-  description: Azure Scheduler volgt het beleid voor moderne levenscyclus.
+  title: Azure Scheduler
+  description: Azure Scheduler volgt het moderne levenscyclusbeleid.
   ms.date: 07/28/2020
   ms.openlocfilehash: c5e6273a70a409fc5947fb69ea6103e771128747
   ms.sourcegitcommit: 6b0f0d4ac042ba924016a386cd23db5f1ed22756
-  ms.translationtype: MT
+  ms.translationtype: HT
   ms.contentlocale: nl-NL
   ms.lasthandoff: 07/29/2020
   ms.locfileid: "851644"
-name: Azure-planner
+name: Azure Scheduler
 summary: >+
-  Azure Scheduler volgt het beleid voor [moderne](/lifecycle/policies/modern) levenscyclus.
+  Azure Scheduler volgt het [moderne](/lifecycle/policies/modern) levenscyclusbeleid.
 
 
 products:
@@ -24,4 +24,4 @@ releases:
 - version: Original Release
   startDate: 07/01/2014
   endDate: 09/30/2019
-content: "\n## <a name=\"links\"></a>Verwijzigingen \n* [Migratiebegeleiding](/azure/scheduler/migrate-from-scheduler-to-logic-apps)"
+content: "\n## <a name=\"links\"></a>Koppelingen \n* [Richtlijnen voor migratie](/azure/scheduler/migrate-from-scheduler-to-logic-apps)"
