--- a/lifecycle-data/products/azure-stack-hub.yml
+++ b/lifecycle-data/products/azure-stack-hub.yml
@@ -1,17 +1,17 @@
 ### YamlMime:Lifecycle
 metadata:
   title: Azure Stack Hub
-  description: Azure Stack Hub volgt het beleid voor moderne levenscyclus.
+  description: Azure Stack Hub volgt het moderne levenscyclusbeleid.
   ms.date: 07/28/2020
   ms.openlocfilehash: d538d37b723536a3602535e952e1a9f3398e6ae4
   ms.sourcegitcommit: e15c32a90036b92acce9ef863cc808ad719160b8
-  ms.translationtype: MT
+  ms.translationtype: HT
   ms.contentlocale: nl-NL
   ms.lasthandoff: 07/29/2020
   ms.locfileid: "868712"
 name: Azure Stack Hub
 summary: >+
-  Azure Stack Hub volgt het beleid voor [moderne](/lifecycle/policies/modern) levenscyclus.
+  Azure Stack Hub volgt het [moderne](/lifecycle/policies/modern) levenscyclusbeleid.
 
 
 products:
@@ -22,4 +22,4 @@ supportDates:
 releases:
 - version: Original Release
   startDate: 08/31/2017
-content: "\n## <a name=\"links\"></a>Verwijzigingen \n* [Onderhoudsinformatie en tijdlijnen](/azure/azure-stack/azure-stack-servicing-policy)"
+content: "\n## <a name=\"links\"></a>Koppelingen \n* [Onderhoudsinformatie en tijdlijnen](/azure/azure-stack/azure-stack-servicing-policy)"
