--- a/lifecycle-data/products/azure-virtual-machine.yml
+++ b/lifecycle-data/products/azure-virtual-machine.yml
@@ -1,17 +1,17 @@
 ### YamlMime:Lifecycle
 metadata:
   title: Azure Virtual Machine
-  description: Azure Virtual Machine volgt het beleid voor moderne levenscyclus.
+  description: Azure Virtual Machine volgt het moderne levenscyclusbeleid.
   ms.date: 07/28/2020
   ms.openlocfilehash: 84ee256cb8f83f04ce94702234a380442fb2e69a
   ms.sourcegitcommit: 6b0f0d4ac042ba924016a386cd23db5f1ed22756
-  ms.translationtype: MT
+  ms.translationtype: HT
   ms.contentlocale: nl-NL
   ms.lasthandoff: 07/29/2020
   ms.locfileid: "851885"
 name: Azure Virtual Machine
 summary: >+
-  Azure Virtual Machine volgt het beleid voor [moderne](/lifecycle/policies/modern) levenscyclus.
+  Azure Virtual Machine volgt het [moderne](/lifecycle/policies/modern) levenscyclusbeleid.
 
 
 products:
@@ -22,4 +22,4 @@ supportDates:
 releases:
 - version: Original Release
   startDate: 06/07/2012
-content: "\n## <a name=\"links\"></a>Verwijzigingen \n* [Onderhoudsinformatie](https://support.microsoft.com/help/2721672/microsoft-server-software-support-for-microsoft-azure-virtual-machines)"
+content: "\n## <a name=\"links\"></a>Koppelingen \n* [Onderhoudsinformatie](https://support.microsoft.com/help/2721672/microsoft-server-software-support-for-microsoft-azure-virtual-machines)"
