--- a/lifecycle-data/products/power-bi-report-server-choose-correct-start-date.yml
+++ b/lifecycle-data/products/power-bi-report-server-choose-correct-start-date.yml
@@ -1,17 +1,17 @@
 ### YamlMime:Lifecycle
 metadata:
-  title: Power BI-rapportserver
-  description: Power BI Report Server volgt het beleid voor moderne levenscyclus.
+  title: Power BI Report Server
+  description: Power BI Report Server volgt het moderne levenscyclusbeleid.
   ms.date: 07/28/2020
   ms.openlocfilehash: 595ca1b035c661c5f2822dd0ab71578a5995290f
   ms.sourcegitcommit: e15c32a90036b92acce9ef863cc808ad719160b8
-  ms.translationtype: MT
+  ms.translationtype: HT
   ms.contentlocale: nl-NL
   ms.lasthandoff: 07/29/2020
   ms.locfileid: "868786"
-name: Power BI-rapportserver
+name: Power BI Report Server
 summary: >+
-  Power BI Report Server volgt het beleid voor [moderne](/lifecycle/policies/modern) levenscyclus.
+  Power BI Report Server volgt het [moderne](/lifecycle/policies/modern) levenscyclusbeleid.
 
 
 products:
@@ -22,4 +22,4 @@ supportDates:
 releases:
 - version: Original Release
   startDate: 06/12/2017
-content: "\n## <a name=\"links\"></a>Verwijzigingen \n* [Onderhoudsinformatie](https://powerbi.microsoft.com/documentation/reportserver-support-timeline/)"
+content: "\n## <a name=\"links\"></a>Koppelingen \n* [Onderhoudsinformatie](https://powerbi.microsoft.com/documentation/reportserver-support-timeline/)"
