--- a/lifecycle-data/products/skype-room-systems-v2.yml
+++ b/lifecycle-data/products/skype-room-systems-v2.yml
@@ -1,17 +1,17 @@
 ### YamlMime:Lifecycle
 metadata:
-  title: Skype Room-systemen v2
-  description: Skype Room Systems v2 volgt het beleid voor moderne levenscyclus.
+  title: Skype-ruimtesystemen v2
+  description: Skype-ruimtesystemen v2 volgt het moderne levenscyclusbeleid.
   ms.date: 07/28/2020
   ms.openlocfilehash: 1b100edccfa58c69264c6e9584cc7f08e1332419
   ms.sourcegitcommit: 6b0f0d4ac042ba924016a386cd23db5f1ed22756
-  ms.translationtype: MT
+  ms.translationtype: HT
   ms.contentlocale: nl-NL
   ms.lasthandoff: 07/29/2020
   ms.locfileid: "852037"
-name: Skype Room-systemen v2
+name: Skype-ruimtesystemen v2
 summary: >+
-  Skype Room Systems v2 volgt het beleid [voor moderne](/lifecycle/policies/modern) levenscyclus.
+  Skype-ruimtesystemen v2 volgt het [moderne](/lifecycle/policies/modern) levenscyclusbeleid.
 
 
 products:
@@ -22,4 +22,4 @@ supportDates:
 releases:
 - version: Original Release
   startDate: 11/18/2016
-content: "\n## <a name=\"links\"></a>Verwijzigingen \n* [Onderhoudsinformatie](https://support.office.com/article/support-for-skype-room-systems-v2-current-branch-versions-e915d5f4-7b70-47ca-94b7-d7153048ba38)"
+content: "\n## <a name=\"links\"></a>Koppelingen \n* [Onderhoudsinformatie](https://support.office.com/article/support-for-skype-room-systems-v2-current-branch-versions-e915d5f4-7b70-47ca-94b7-d7153048ba38)"
