--- a/lifecycle-data/products/azure-cyclecloud.yml
+++ b/lifecycle-data/products/azure-cyclecloud.yml
@@ -1,17 +1,17 @@
 ### YamlMime:Lifecycle
 metadata:
   title: Azure CycleCloud
-  description: Azure CycleCloud volgt het beleid voor moderne levenscyclus.
+  description: Azure CycleCloud volgt het moderne levenscyclusbeleid.
   ms.date: 07/28/2020
   ms.openlocfilehash: 4372209f8c7d30c736fb93349bff6a395b0e77ab
   ms.sourcegitcommit: e15c32a90036b92acce9ef863cc808ad719160b8
-  ms.translationtype: MT
+  ms.translationtype: HT
   ms.contentlocale: nl-NL
   ms.lasthandoff: 07/29/2020
   ms.locfileid: "868723"
 name: Azure CycleCloud
 summary: >+
-  Azure CycleCloud volgt het beleid voor [moderne](/lifecycle/policies/modern) levenscyclus.
+  Azure CycleCloud volgt het [moderne](/lifecycle/policies/modern) levenscyclusbeleid.
 
 
 products:
@@ -22,4 +22,4 @@ supportDates:
 releases:
 - version: Original Release
   startDate: 08/01/2018
-content: "\n## <a name=\"links\"></a>Verwijzigingen \n* [Onderhoudsinformatie](/azure/cyclecloud/service-policy)"
+content: "\n## <a name=\"links\"></a>Koppelingen \n* [Onderhoudsinformatie](/azure/cyclecloud/service-policy)"
