--- a/lifecycle-data/products/azure-devops-server-2019.yml
+++ b/lifecycle-data/products/azure-devops-server-2019.yml
@@ -1,17 +1,17 @@
 ### YamlMime:Lifecycle
 metadata:
   title: Azure DevOps Server 2019
-  description: Azure DevOps Server 2019 volgt het beleid voor vaste levenscyclus.
+  description: Azure DevOps Server 2019 volgt het vaste levenscyclusbeleid.
   ms.date: 07/28/2020
   ms.openlocfilehash: a15d9ba4c905a38a9743b959a5b36e8e3f24ec3b
   ms.sourcegitcommit: e15c32a90036b92acce9ef863cc808ad719160b8
-  ms.translationtype: MT
+  ms.translationtype: HT
   ms.contentlocale: nl-NL
   ms.lasthandoff: 07/29/2020
   ms.locfileid: "868724"
 name: Azure DevOps Server 2019
 summary: >+
-  Azure DevOps Server 2019 volgt het beleid [voor vaste](/lifecycle/policies/fixed) levenscyclus.
+  Azure DevOps Server 2019 volgt het [vaste](/lifecycle/policies/fixed) levenscyclusbeleid.
 
 
 products:
