--- a/lifecycle-data/products/azure-remoteapp.yml
+++ b/lifecycle-data/products/azure-remoteapp.yml
@@ -1,17 +1,17 @@
 ### YamlMime:Lifecycle
 metadata:
   title: Azure RemoteApp
-  description: Azure RemoteApp volgt het beleid voor moderne levenscyclus.
+  description: Azure RemoteApp volgt het moderne levenscyclusbeleid.
   ms.date: 07/28/2020
   ms.openlocfilehash: c03f6f9d17b84e2f2e947f465e828af941f968e9
   ms.sourcegitcommit: 6b0f0d4ac042ba924016a386cd23db5f1ed22756
-  ms.translationtype: MT
+  ms.translationtype: HT
   ms.contentlocale: nl-NL
   ms.lasthandoff: 07/29/2020
   ms.locfileid: "851641"
 name: Azure RemoteApp
 summary: >+
-  Azure RemoteApp volgt het beleid voor [moderne](/lifecycle/policies/modern) levenscyclus.
+  Azure RemoteApp volgt het [moderne](/lifecycle/policies/modern) levenscyclusbeleid.
 
 
 products:
@@ -24,4 +24,4 @@ releases:
 - version: Original Release
   startDate: 03/11/2015
   endDate: 08/31/2017
-content: "\n## <a name=\"links\"></a>Verwijzigingen \n* [Migratiebegeleiding](https://techcommunity.microsoft.com/t5/microsoft-security-and/application-remoting-and-the-cloud/ba-p/249927)"
+content: "\n## <a name=\"links\"></a>Koppelingen \n* [Richtlijnen voor migratie](https://techcommunity.microsoft.com/t5/microsoft-security-and/application-remoting-and-the-cloud/ba-p/249927)"
