--- a/lifecycle-data/products/azure-storsimple-1200-series.yml
+++ b/lifecycle-data/products/azure-storsimple-1200-series.yml
@@ -1,17 +1,17 @@
 ### YamlMime:Lifecycle
 metadata:
   title: Azure StorSimple 1200-serie
-  description: Azure StorSimple 1200-serie volgt het beleid voor vaste levenscyclus.
+  description: Azure StorSimple 1200 Series volgt het vaste levenscyclusbeleid.
   ms.date: 07/28/2020
   ms.openlocfilehash: 82f3a04f6c89120819c1db952a04ddbd45d4f9c9
   ms.sourcegitcommit: 6b0f0d4ac042ba924016a386cd23db5f1ed22756
-  ms.translationtype: MT
+  ms.translationtype: HT
   ms.contentlocale: nl-NL
   ms.lasthandoff: 07/29/2020
   ms.locfileid: "851653"
 name: Azure StorSimple 1200-serie
 summary: >+
-  Azure StorSimple 1200-serie volgt het beleid [voor vaste](/lifecycle/policies/fixed) levenscyclus.
+  Azure StorSimple 1200 Series volgt het [vaste](/lifecycle/policies/fixed) levenscyclusbeleid.
 
 
 products:
@@ -24,4 +24,4 @@ supportDates:
 releases:
 - version: Original Release
   startDate: 10/28/2016
-content: "\n## <a name=\"links\"></a>Verwijzigingen \n* [Migratiebegeleiding](/azure/storage/files/storage-files-migration-storsimple-1200)"
+content: "\n## <a name=\"links\"></a>Koppelingen \n* [Richtlijnen voor migratie](/azure/storage/files/storage-files-migration-storsimple-1200)"
