--- a/lifecycle-data/products/azure-virtual-wan.yml
+++ b/lifecycle-data/products/azure-virtual-wan.yml
@@ -1,17 +1,17 @@
 ### YamlMime:Lifecycle
 metadata:
   title: Azure Virtual WAN
-  description: Azure Virtual WAN volgt het beleid voor moderne levenscyclus.
+  description: Azure Virtual WAN volgt het moderne levenscyclusbeleid.
   ms.date: 07/28/2020
   ms.openlocfilehash: f6c8e8b638b9bb6a65bd3213cc23c61ad3c39b0b
   ms.sourcegitcommit: e15c32a90036b92acce9ef863cc808ad719160b8
-  ms.translationtype: MT
+  ms.translationtype: HT
   ms.contentlocale: nl-NL
   ms.lasthandoff: 07/29/2020
   ms.locfileid: "868701"
 name: Azure Virtual WAN
 summary: >+
-  Azure Virtual WAN volgt het beleid voor [moderne](/lifecycle/policies/modern) levenscyclus.
+  Azure Virtual WAN volgt het [moderne](/lifecycle/policies/modern) levenscyclusbeleid.
 
 
 products:
