--- a/lifecycle-data/products/dynamics-c5-2014.yml
+++ b/lifecycle-data/products/dynamics-c5-2014.yml
@@ -1,17 +1,17 @@
 ### YamlMime:Lifecycle
 metadata:
-  title: Dynamiek C5 2014
-  description: Dynamics C5 2014 volgt het beleid voor vaste levenscyclus.
+  title: Dynamics C5 2014
+  description: Dynamics C5 2014 volgt het vaste levenscyclusbeleid.
   ms.date: 07/28/2020
   ms.openlocfilehash: e4f0556a8fd84b688392121720ac06d2b6945eec
   ms.sourcegitcommit: 6b0f0d4ac042ba924016a386cd23db5f1ed22756
-  ms.translationtype: MT
+  ms.translationtype: HT
   ms.contentlocale: nl-NL
   ms.lasthandoff: 07/29/2020
   ms.locfileid: "851916"
-name: Dynamiek C5 2014
+name: Dynamics C5 2014
 summary: >+
-  Dynamics C5 2014 volgt het beleid [voor vaste](/lifecycle/policies/fixed) levenscyclus.
+  Dynamics C5 2014 volgt het [vaste](/lifecycle/policies/fixed) levenscyclusbeleid.
 
 
 products:
