--- a/lifecycle-data/products/dynamics-c5-2015.yml
+++ b/lifecycle-data/products/dynamics-c5-2015.yml
@@ -1,17 +1,17 @@
 ### YamlMime:Lifecycle
 metadata:
   title: Dynamics C5 2015
-  description: Dynamics C5 2015 volgt het beleid voor vaste levenscyclus.
+  description: Dynamics C5 2015 volgt het vaste levenscyclusbeleid.
   ms.date: 07/28/2020
   ms.openlocfilehash: 1a63d2f744781d36a66b40bcdbd799cd7c425c1a
   ms.sourcegitcommit: 6b0f0d4ac042ba924016a386cd23db5f1ed22756
-  ms.translationtype: MT
+  ms.translationtype: HT
   ms.contentlocale: nl-NL
   ms.lasthandoff: 07/29/2020
   ms.locfileid: "851915"
 name: Dynamics C5 2015
 summary: >+
-  Dynamics C5 2015 volgt het beleid [voor vaste](/lifecycle/policies/fixed) levenscyclus.
+  Dynamics C5 2015 volgt het [vaste](/lifecycle/policies/fixed) levenscyclusbeleid.
 
 
 products:
