--- a/lifecycle-data/products/dynamics-c5-2016.yml
+++ b/lifecycle-data/products/dynamics-c5-2016.yml
@@ -1,17 +1,17 @@
 ### YamlMime:Lifecycle
 metadata:
   title: Dynamics C5 2016
-  description: Dynamics C5 2016 volgt het beleid voor vaste levenscyclus.
+  description: Dynamics C5 2016 volgt het vaste levenscyclusbeleid.
   ms.date: 07/28/2020
   ms.openlocfilehash: 7f174d3ef6f65ebbfacd00fedb86ee8528d0601f
   ms.sourcegitcommit: 6b0f0d4ac042ba924016a386cd23db5f1ed22756
-  ms.translationtype: MT
+  ms.translationtype: HT
   ms.contentlocale: nl-NL
   ms.lasthandoff: 07/29/2020
   ms.locfileid: "851909"
 name: Dynamics C5 2016
 summary: >+
-  Dynamics C5 2016 volgt het beleid [voor vaste](/lifecycle/policies/fixed) levenscyclus.
+  Dynamics C5 2016 volgt het [vaste](/lifecycle/policies/fixed) levenscyclusbeleid.
 
 
 products:
