--- a/lifecycle-data/products/dynamics-crm-2015.yml
+++ b/lifecycle-data/products/dynamics-crm-2015.yml
@@ -1,17 +1,17 @@
 ### YamlMime:Lifecycle
 metadata:
   title: Dynamics CRM 2015
-  description: Dynamics CRM 2015 volgt het beleid voor vaste levenscyclus.
+  description: Dynamics CRM 2015 volgt het vaste levenscyclusbeleid.
   ms.date: 07/28/2020
   ms.openlocfilehash: 8ed74b140e6c7efc0913db1aced0cac171298a8b
   ms.sourcegitcommit: 6b0f0d4ac042ba924016a386cd23db5f1ed22756
-  ms.translationtype: MT
+  ms.translationtype: HT
   ms.contentlocale: nl-NL
   ms.lasthandoff: 07/29/2020
   ms.locfileid: "852102"
 name: Dynamics CRM 2015
 summary: >+
-  Dynamics CRM 2015 volgt het beleid [voor vaste](/lifecycle/policies/fixed) levenscyclus.
+  Dynamics CRM 2015 volgt het [vaste](/lifecycle/policies/fixed) levenscyclusbeleid.
 
 
 products:
@@ -25,4 +25,4 @@ releases:
 - version: Original Release (ver 7.0)
   startDate: 02/11/2015
   endDate: 01/14/2025
-content: "\n## <a name=\"links\"></a>Verwijzigingen \n* [Ondersteuningsinformatie](https://support.microsoft.com/help/3018363/microsoft-dynamics-crm-2015-updates-and-hotfixes)"
+content: "\n## <a name=\"links\"></a>Koppelingen \n* [Ondersteuningsgegevens](https://support.microsoft.com/help/3018363/microsoft-dynamics-crm-2015-updates-and-hotfixes)"
