--- a/lifecycle-data/products/dynamics-gp-2018.yml
+++ b/lifecycle-data/products/dynamics-gp-2018.yml
@@ -1,17 +1,17 @@
 ### YamlMime:Lifecycle
 metadata:
   title: Dynamics GP 2018
-  description: Dynamics GP 2018 volgt het beleid voor vaste levenscyclus.
+  description: Dynamics GP 2018 volgt het vaste levenscyclusbeleid.
   ms.date: 07/28/2020
   ms.openlocfilehash: ceeb4827503ab282ee2ffef12cc0518f3f80ae2c
   ms.sourcegitcommit: e15c32a90036b92acce9ef863cc808ad719160b8
-  ms.translationtype: MT
+  ms.translationtype: HT
   ms.contentlocale: nl-NL
   ms.lasthandoff: 07/29/2020
   ms.locfileid: "868679"
 name: Dynamics GP 2018
 summary: >+
-  Dynamics GP 2018 volgt het [beleid voor vaste](/lifecycle/policies/fixed) levenscyclus.
+  Dynamics GP 2018 volgt het [vaste](/lifecycle/policies/fixed) levenscyclusbeleid.
 
 
 products:
