--- a/lifecycle-data/products/dynamics-nav-2013-r2.yml
+++ b/lifecycle-data/products/dynamics-nav-2013-r2.yml
@@ -1,17 +1,17 @@
 ### YamlMime:Lifecycle
 metadata:
   title: Dynamics NAV 2013 R2
-  description: Dynamics NAV 2013 R2 volgt het beleid voor vaste levenscyclus.
+  description: Dynamics NAV 2013 R2 volgt het vaste levenscyclusbeleid.
   ms.date: 07/28/2020
   ms.openlocfilehash: 0a2fe60c0f3cd8cea6cd257ea6ffb1a0db100bd6
   ms.sourcegitcommit: 6b0f0d4ac042ba924016a386cd23db5f1ed22756
-  ms.translationtype: MT
+  ms.translationtype: HT
   ms.contentlocale: nl-NL
   ms.lasthandoff: 07/29/2020
   ms.locfileid: "852001"
 name: Dynamics NAV 2013 R2
 summary: >+
-  Dynamics NAV 2013 R2 volgt het [beleid voor vaste](/lifecycle/policies/fixed) levenscyclus.
+  Dynamics NAV 2013 R2 volgt het [vaste](/lifecycle/policies/fixed) levenscyclusbeleid.
 
 
 products:
