--- a/lifecycle-data/products/dynamics-nav-2013.yml
+++ b/lifecycle-data/products/dynamics-nav-2013.yml
@@ -1,17 +1,17 @@
 ### YamlMime:Lifecycle
 metadata:
-  title: Dynamiek NAV 2013
-  description: Dynamics NAV 2013 volgt het beleid voor vaste levenscyclus.
+  title: Dynamics NAV 2013
+  description: Dynamics NAV 2013 volgt het vaste levenscyclusbeleid.
   ms.date: 07/28/2020
   ms.openlocfilehash: 6657628e04a8fc5967384da4436cfe59066f36e5
   ms.sourcegitcommit: 6b0f0d4ac042ba924016a386cd23db5f1ed22756
-  ms.translationtype: MT
+  ms.translationtype: HT
   ms.contentlocale: nl-NL
   ms.lasthandoff: 07/29/2020
   ms.locfileid: "852000"
-name: Dynamiek NAV 2013
+name: Dynamics NAV 2013
 summary: >+
-  Dynamics NAV 2013 volgt het [beleid voor vaste](/lifecycle/policies/fixed) levenscyclus.
+  Dynamics NAV 2013 volgt het [vaste](/lifecycle/policies/fixed) levenscyclusbeleid.
 
 
 products:
