--- a/lifecycle-data/products/dynamics-nav-2015.yml
+++ b/lifecycle-data/products/dynamics-nav-2015.yml
@@ -1,17 +1,17 @@
 ### YamlMime:Lifecycle
 metadata:
-  title: Dynamiek NAV 2015
-  description: Dynamics NAV 2015 volgt het beleid voor vaste levenscyclus.
+  title: Dynamics NAV 2015
+  description: Dynamics NAV 2015 volgt het vaste levenscyclusbeleid.
   ms.date: 07/28/2020
   ms.openlocfilehash: d8e88321e72a0c59e0d5f43b938b8eb14b912a58
   ms.sourcegitcommit: 6b0f0d4ac042ba924016a386cd23db5f1ed22756
-  ms.translationtype: MT
+  ms.translationtype: HT
   ms.contentlocale: nl-NL
   ms.lasthandoff: 07/29/2020
   ms.locfileid: "851996"
-name: Dynamiek NAV 2015
+name: Dynamics NAV 2015
 summary: >+
-  Dynamics NAV 2015 volgt het [beleid voor vaste](/lifecycle/policies/fixed) levenscyclus.
+  Dynamics NAV 2015 volgt het [vaste](/lifecycle/policies/fixed) levenscyclusbeleid.
 
 
 products:
