--- a/lifecycle-data/products/dynamics-nav-2017.yml
+++ b/lifecycle-data/products/dynamics-nav-2017.yml
@@ -1,17 +1,17 @@
 ### YamlMime:Lifecycle
 metadata:
-  title: Dynamiek NAV 2017
-  description: Dynamics NAV 2017 volgt het beleid voor vaste levenscyclus.
+  title: Dynamics NAV 2017
+  description: Dynamics NAV 2017 volgt het vaste levenscyclusbeleid.
   ms.date: 07/28/2020
   ms.openlocfilehash: 1b936cca350da64d99a63eb15f0571e477cdb3ea
   ms.sourcegitcommit: 6b0f0d4ac042ba924016a386cd23db5f1ed22756
-  ms.translationtype: MT
+  ms.translationtype: HT
   ms.contentlocale: nl-NL
   ms.lasthandoff: 07/29/2020
   ms.locfileid: "851992"
-name: Dynamiek NAV 2017
+name: Dynamics NAV 2017
 summary: >+
-  Dynamics NAV 2017 volgt het [beleid voor vaste](/lifecycle/policies/fixed) levenscyclus.
+  Dynamics NAV 2017 volgt het [vaste](/lifecycle/policies/fixed) levenscyclusbeleid.
 
 
 products:
