--- a/lifecycle-data/products/dynamics-sl-2015.yml
+++ b/lifecycle-data/products/dynamics-sl-2015.yml
@@ -1,17 +1,17 @@
 ### YamlMime:Lifecycle
 metadata:
   title: Dynamics SL 2015
-  description: Dynamics SL 2015 volgt het beleid voor vaste levenscyclus.
+  description: Dynamics SL 2015 volgt het vaste levenscyclusbeleid.
   ms.date: 07/28/2020
   ms.openlocfilehash: a082204c2a5c05abdabc7d16de83e67eb3a115b4
   ms.sourcegitcommit: 6b0f0d4ac042ba924016a386cd23db5f1ed22756
-  ms.translationtype: MT
+  ms.translationtype: HT
   ms.contentlocale: nl-NL
   ms.lasthandoff: 07/29/2020
   ms.locfileid: "851990"
 name: Dynamics SL 2015
 summary: >+
-  Dynamics SL 2015 volgt het beleid [voor vaste](/lifecycle/policies/fixed) levenscyclus.
+  Dynamics SL 2015 volgt het [vaste](/lifecycle/policies/fixed) levenscyclusbeleid.
 
 
 products:
