--- a/lifecycle-data/products/dynamics-sl-2018.yml
+++ b/lifecycle-data/products/dynamics-sl-2018.yml
@@ -1,17 +1,17 @@
 ### YamlMime:Lifecycle
 metadata:
   title: Dynamics SL 2018
-  description: Dynamics SL 2018 volgt het beleid voor vaste levenscyclus.
+  description: Dynamics SL 2018 volgt het vaste levenscyclusbeleid.
   ms.date: 07/28/2020
   ms.openlocfilehash: fc0bdf4ae2169693810562fae9e99475027e07d8
   ms.sourcegitcommit: e15c32a90036b92acce9ef863cc808ad719160b8
-  ms.translationtype: MT
+  ms.translationtype: HT
   ms.contentlocale: nl-NL
   ms.lasthandoff: 07/29/2020
   ms.locfileid: "868678"
 name: Dynamics SL 2018
 summary: >+
-  Dynamics SL 2018 volgt het beleid [voor vaste](/lifecycle/policies/fixed) levenscyclus.
+  Dynamics SL 2018 volgt het [vaste](/lifecycle/policies/fixed) levenscyclusbeleid.
 
 
 products:
