--- a/lifecycle-data/products/excel-2016-for-mac.yml
+++ b/lifecycle-data/products/excel-2016-for-mac.yml
@@ -1,17 +1,17 @@
 ### YamlMime:Lifecycle
 metadata:
   title: Excel 2016 voor Mac
-  description: Excel 2016 voor Mac volgt het beleid voor een vaste levenscyclus.
+  description: Excel 2016 voor Mac volgt het vaste levenscyclusbeleid.
   ms.date: 07/28/2020
   ms.openlocfilehash: 669ce6b5a17f553274d47ddc9a3b61a4ffc539ff
   ms.sourcegitcommit: 6b0f0d4ac042ba924016a386cd23db5f1ed22756
-  ms.translationtype: MT
+  ms.translationtype: HT
   ms.contentlocale: nl-NL
   ms.lasthandoff: 07/29/2020
   ms.locfileid: "851983"
 name: Excel 2016 voor Mac
 summary: >+
-  Excel 2016 voor Mac volgt het beleid voor [een vaste](/lifecycle/policies/fixed) levenscyclus.
+  Excel 2016 voor Mac volgt het [vaste](/lifecycle/policies/fixed) levenscyclusbeleid.
 
 
 products:
