--- a/lifecycle-data/products/excel-2019-for-mac.yml
+++ b/lifecycle-data/products/excel-2019-for-mac.yml
@@ -1,17 +1,17 @@
 ### YamlMime:Lifecycle
 metadata:
   title: Excel 2019 voor Mac
-  description: Excel 2019 voor Mac volgt het beleid voor een vaste levenscyclus.
+  description: Excel 2019 voor Mac volgt het vaste levenscyclusbeleid.
   ms.date: 07/28/2020
   ms.openlocfilehash: 4945b6b496565c5870184daf9fff71c99c1d8979
   ms.sourcegitcommit: e15c32a90036b92acce9ef863cc808ad719160b8
-  ms.translationtype: MT
+  ms.translationtype: HT
   ms.contentlocale: nl-NL
   ms.lasthandoff: 07/29/2020
   ms.locfileid: "868683"
 name: Excel 2019 voor Mac
 summary: >+
-  Excel 2019 voor Mac volgt het beleid voor [een vaste](/lifecycle/policies/fixed) levenscyclus.
+  Excel 2019 voor Mac volgt het [vaste](/lifecycle/policies/fixed) levenscyclusbeleid.
 
 
 products:
