--- a/lifecycle-data/products/hpc-pack-2012-r2.yml
+++ b/lifecycle-data/products/hpc-pack-2012-r2.yml
@@ -1,17 +1,17 @@
 ### YamlMime:Lifecycle
 metadata:
   title: HPC Pack 2012 R2
-  description: HPC Pack 2012 R2 volgt het beleid voor vaste levenscyclus.
+  description: HPC Pack 2012 R2 volgt het vaste levenscyclusbeleid.
   ms.date: 07/28/2020
   ms.openlocfilehash: d7802fad933b467ceabe63c7c882c6117709ec4f
   ms.sourcegitcommit: 6b0f0d4ac042ba924016a386cd23db5f1ed22756
-  ms.translationtype: MT
+  ms.translationtype: HT
   ms.contentlocale: nl-NL
   ms.lasthandoff: 07/29/2020
   ms.locfileid: "851822"
 name: HPC Pack 2012 R2
 summary: >+
-  HPC Pack 2012 R2 volgt het beleid [voor vaste](/lifecycle/policies/fixed) levenscyclus.
+  HPC Pack 2012 R2 volgt het [vaste](/lifecycle/policies/fixed) levenscyclusbeleid.
 
 
 products:
@@ -25,4 +25,4 @@ releases:
 - version: Original Release
   startDate: 04/14/2014
   endDate: 04/11/2023
-content: "\n## <a name=\"links\"></a>Verwijzigingen \n* [Overzicht van Microsoft HPC Pack](/powershell/high-performance-computing/overview-of-microsoft-hpc-pack?view=hpc19-ps)"
+content: "\n## <a name=\"links\"></a>Koppelingen \n* [Overzicht van Microsoft HPC Pack](/powershell/high-performance-computing/overview-of-microsoft-hpc-pack?view=hpc19-ps)"
