--- a/lifecycle-data/products/hyperv-server-2012-r2.yml
+++ b/lifecycle-data/products/hyperv-server-2012-r2.yml
@@ -1,17 +1,17 @@
 ### YamlMime:Lifecycle
 metadata:
   title: Hyper-V Server 2012 R2
-  description: Hyper-V Server 2012 R2 volgt het beleid voor vaste levenscyclus.
+  description: Hyper-V Server 2012 R2 volgt het vaste levenscyclusbeleid.
   ms.date: 07/28/2020
   ms.openlocfilehash: b64900d0a04701e5f7f505d2234c43d520949d28
   ms.sourcegitcommit: 6b0f0d4ac042ba924016a386cd23db5f1ed22756
-  ms.translationtype: MT
+  ms.translationtype: HT
   ms.contentlocale: nl-NL
   ms.lasthandoff: 07/29/2020
   ms.locfileid: "851882"
 name: Hyper-V Server 2012 R2
 summary: >+
-  Hyper-V Server 2012 R2 volgt het beleid [voor vaste](/lifecycle/policies/fixed) levenscyclus.
+  Hyper-V Server 2012 R2 volgt het [vaste](/lifecycle/policies/fixed) levenscyclusbeleid.
 
 
 products:
