--- a/lifecycle-data/products/hyperv-server-2016.yml
+++ b/lifecycle-data/products/hyperv-server-2016.yml
@@ -1,17 +1,17 @@
 ### YamlMime:Lifecycle
 metadata:
-  title: Hyper-V-server 2016
-  description: Hyper-V Server 2016 volgt het beleid voor vaste levenscyclus.
+  title: Hyper-V Server 2016
+  description: Hyper-V Server 2016 volgt het vaste levenscyclusbeleid.
   ms.date: 07/28/2020
   ms.openlocfilehash: 6f2d6eed9e7780fef8b8e6aba52ee70474f636c7
   ms.sourcegitcommit: 6b0f0d4ac042ba924016a386cd23db5f1ed22756
-  ms.translationtype: MT
+  ms.translationtype: HT
   ms.contentlocale: nl-NL
   ms.lasthandoff: 07/29/2020
   ms.locfileid: "851880"
-name: Hyper-V-server 2016
+name: Hyper-V Server 2016
 summary: >+
-  Hyper-V Server 2016 volgt het beleid [voor vaste](/lifecycle/policies/fixed) levenscyclus.
+  Hyper-V Server 2016 volgt het [vaste](/lifecycle/policies/fixed) levenscyclusbeleid.
 
 
 products:
