--- a/lifecycle-data/products/microsoft-bitlocker-administration-and-monitoring-10.yml
+++ b/lifecycle-data/products/microsoft-bitlocker-administration-and-monitoring-10.yml
@@ -1,17 +1,17 @@
 ### YamlMime:Lifecycle
 metadata:
-  title: Microsoft BitLocker-beheer en -controle 1.0
-  description: Microsoft BitLocker-beheer en -monitoring 1.0 volgt het beleid voor vaste levenscyclus.
+  title: Microsoft BitLocker Administration and Monitoring 1.0
+  description: Microsoft BitLocker Administration and Monitoring 1.0 volgt het vaste levenscyclusbeleid.
   ms.date: 07/28/2020
   ms.openlocfilehash: 57eba1e1f6926dc0bf600e61ea3db5c3eda1ec86
   ms.sourcegitcommit: 6b0f0d4ac042ba924016a386cd23db5f1ed22756
-  ms.translationtype: MT
+  ms.translationtype: HT
   ms.contentlocale: nl-NL
   ms.lasthandoff: 07/29/2020
   ms.locfileid: "851976"
-name: Microsoft BitLocker-beheer en -controle 1.0
+name: Microsoft BitLocker Administration and Monitoring 1.0
 summary: >+
-  Microsoft BitLocker-beheer en -monitoring 1.0 volgt het beleid [voor vaste](/lifecycle/policies/fixed) levenscyclus.
+  Microsoft BitLocker Administration and Monitoring 1.0 volgt het [vaste](/lifecycle/policies/fixed) levenscyclusbeleid.
 
 
 products:
