--- a/lifecycle-data/products/microsoft-diagnostics-and-recovery-toolset-100.yml
+++ b/lifecycle-data/products/microsoft-diagnostics-and-recovery-toolset-100.yml
@@ -1,17 +1,17 @@
 ### YamlMime:Lifecycle
 metadata:
-  title: Microsoft Diagnostics and Recovery Toolset 10.0
-  description: Microsoft Diagnostics and Recovery Toolset 10.0 volgt het beleid voor vaste levenscyclus.
+  title: Diagnose- en herstelhulpmiddelenset van Microsoft 10.0
+  description: Diagnose- en herstelhulpmiddelenset van Microsoft 10.0 volgt het vaste levenscyclusbeleid.
   ms.date: 07/28/2020
   ms.openlocfilehash: 46c297ae7fa494c3a70d86bf5ce3f8ec62e906f4
   ms.sourcegitcommit: 6b0f0d4ac042ba924016a386cd23db5f1ed22756
-  ms.translationtype: MT
+  ms.translationtype: HT
   ms.contentlocale: nl-NL
   ms.lasthandoff: 07/29/2020
   ms.locfileid: "851785"
-name: Microsoft Diagnostics and Recovery Toolset 10.0
+name: Diagnose- en herstelhulpmiddelenset van Microsoft 10.0
 summary: >+
-  Microsoft Diagnostics and Recovery Toolset 10.0 volgt het beleid [voor vaste](/lifecycle/policies/fixed) levenscyclus.
+  Diagnose- en herstelhulpmiddelenset van Microsoft 10.0 volgt het [vaste](/lifecycle/policies/fixed) levenscyclusbeleid.
 
 
 products:
