--- a/lifecycle-data/products/microsoft-report-viewer-2012-runtime.yml
+++ b/lifecycle-data/products/microsoft-report-viewer-2012-runtime.yml
@@ -1,17 +1,17 @@
 ### YamlMime:Lifecycle
 metadata:
   title: Microsoft Report Viewer 2012 Runtime
-  description: Microsoft Report Viewer 2012 Runtime volgt het beleid voor vaste levenscyclus.
+  description: Microsoft Report Viewer 2012 Runtime volgt het vaste levenscyclusbeleid.
   ms.date: 07/28/2020
   ms.openlocfilehash: 0196fc49180deffdca7cde2bb35c0ab53dcb6c01
   ms.sourcegitcommit: 6b0f0d4ac042ba924016a386cd23db5f1ed22756
-  ms.translationtype: MT
+  ms.translationtype: HT
   ms.contentlocale: nl-NL
   ms.lasthandoff: 07/29/2020
   ms.locfileid: "851964"
 name: Microsoft Report Viewer 2012 Runtime
 summary: >+
-  Microsoft Report Viewer 2012 Runtime volgt het beleid [voor vaste](/lifecycle/policies/fixed) levenscyclus.
+  Microsoft Report Viewer 2012 Runtime volgt het [vaste](/lifecycle/policies/fixed) levenscyclusbeleid.
 
 
 products:
