--- a/lifecycle-data/products/microsoft-sql-server-compact-40.yml
+++ b/lifecycle-data/products/microsoft-sql-server-compact-40.yml
@@ -1,17 +1,17 @@
 ### YamlMime:Lifecycle
 metadata:
   title: Microsoft SQL Server Compact 4.0
-  description: Microsoft SQL Server Compact 4.0 volgt het beleid voor vaste levenscyclus.
+  description: Microsoft SQL Server Compact 4.0 volgt het vaste levenscyclusbeleid.
   ms.date: 07/28/2020
   ms.openlocfilehash: de6079f5af03208deeed49266be523b5daf38777
   ms.sourcegitcommit: 6b0f0d4ac042ba924016a386cd23db5f1ed22756
-  ms.translationtype: MT
+  ms.translationtype: HT
   ms.contentlocale: nl-NL
   ms.lasthandoff: 07/29/2020
   ms.locfileid: "851873"
 name: Microsoft SQL Server Compact 4.0
 summary: >+
-  Microsoft SQL Server Compact 4.0 volgt het beleid [voor vaste](/lifecycle/policies/fixed) levenscyclus.
+  Microsoft SQL Server Compact 4.0 volgt het [vaste](/lifecycle/policies/fixed) levenscyclusbeleid.
 
 
 products:
