--- a/lifecycle-data/products/office-2013-version-of-office-365-proplus.yml
+++ b/lifecycle-data/products/office-2013-version-of-office-365-proplus.yml
@@ -1,17 +1,17 @@
 ### YamlMime:Lifecycle
 metadata:
   title: Office 2013-versie van Office 365 ProPlus
-  description: Office 2013-versie van Office 365 ProPlus volgt het beleid voor moderne levenscyclus.
+  description: Office 2013-versie van Office 365 ProPlus volgt het moderne levenscyclusbeleid.
   ms.date: 07/28/2020
   ms.openlocfilehash: 737fb217dc596643edfbcb06dd90640e1641c49b
   ms.sourcegitcommit: 6b0f0d4ac042ba924016a386cd23db5f1ed22756
-  ms.translationtype: MT
+  ms.translationtype: HT
   ms.contentlocale: nl-NL
   ms.lasthandoff: 07/29/2020
   ms.locfileid: "851713"
 name: Office 2013-versie van Office 365 ProPlus
 summary: >+
-  Office 2013-versie van Office 365 ProPlus volgt het beleid voor [moderne](/lifecycle/policies/modern) levenscyclus.
+  Office 2013-versie van Office 365 ProPlus volgt het [moderne](/lifecycle/policies/modern) levenscyclusbeleid.
 
 
 products:
