--- a/lifecycle-data/products/office-online-server.yml
+++ b/lifecycle-data/products/office-online-server.yml
@@ -1,17 +1,17 @@
 ### YamlMime:Lifecycle
 metadata:
   title: Office Online Server
-  description: Office Online Server volgt het beleid voor moderne levenscyclus.
+  description: Office Online Server volgt het moderne levenscyclusbeleid.
   ms.date: 07/28/2020
   ms.openlocfilehash: 953cd5a923a96f676bc0204fc7c9419e95889496
   ms.sourcegitcommit: 6b0f0d4ac042ba924016a386cd23db5f1ed22756
-  ms.translationtype: MT
+  ms.translationtype: HT
   ms.contentlocale: nl-NL
   ms.lasthandoff: 07/29/2020
   ms.locfileid: "851744"
 name: Office Online Server
 summary: >+
-  Office Online Server volgt het beleid voor [moderne](/lifecycle/policies/modern) levenscyclus.
+  Office Online Server volgt het [moderne](/lifecycle/policies/modern) levenscyclusbeleid.
 
 
 products:
