--- a/lifecycle-data/products/outlook-2016-for-mac.yml
+++ b/lifecycle-data/products/outlook-2016-for-mac.yml
@@ -1,17 +1,17 @@
 ### YamlMime:Lifecycle
 metadata:
   title: Outlook 2016 voor Mac
-  description: Outlook 2016 voor Mac volgt het beleid voor een vaste levenscyclus.
+  description: Outlook 2016 voor Mac volgt het vaste levenscyclusbeleid.
   ms.date: 07/28/2020
   ms.openlocfilehash: 06a8c4b5d07be47dac865b556c28a4cdbd72bc45
   ms.sourcegitcommit: 6b0f0d4ac042ba924016a386cd23db5f1ed22756
-  ms.translationtype: MT
+  ms.translationtype: HT
   ms.contentlocale: nl-NL
   ms.lasthandoff: 07/29/2020
   ms.locfileid: "851709"
 name: Outlook 2016 voor Mac
 summary: >+
-  Outlook 2016 voor Mac volgt het beleid [voor een vaste](/lifecycle/policies/fixed) levenscyclus.
+  Outlook 2016 voor Mac volgt het [vaste](/lifecycle/policies/fixed) levenscyclusbeleid.
 
 
 products:
