--- a/lifecycle-data/products/powerpoint-2016-for-mac.yml
+++ b/lifecycle-data/products/powerpoint-2016-for-mac.yml
@@ -1,17 +1,17 @@
 ### YamlMime:Lifecycle
 metadata:
   title: PowerPoint 2016 voor Mac
-  description: PowerPoint 2016 voor Mac volgt het beleid voor een vaste levenscyclus.
+  description: PowerPoint 2016 voor Mac volgt het vaste levenscyclusbeleid.
   ms.date: 07/28/2020
   ms.openlocfilehash: 73500fa1b2c71854c832aec2777d83cbd087d669
   ms.sourcegitcommit: 6b0f0d4ac042ba924016a386cd23db5f1ed22756
-  ms.translationtype: MT
+  ms.translationtype: HT
   ms.contentlocale: nl-NL
   ms.lasthandoff: 07/29/2020
   ms.locfileid: "851907"
 name: PowerPoint 2016 voor Mac
 summary: >+
-  PowerPoint 2016 voor Mac volgt het beleid [voor een vaste](/lifecycle/policies/fixed) levenscyclus.
+  PowerPoint 2016 voor Mac volgt het [vaste](/lifecycle/policies/fixed) levenscyclusbeleid.
 
 
 products:
