--- a/lifecycle-data/products/powerpoint-2019-for-mac.yml
+++ b/lifecycle-data/products/powerpoint-2019-for-mac.yml
@@ -1,17 +1,17 @@
 ### YamlMime:Lifecycle
 metadata:
   title: PowerPoint 2019 voor Mac
-  description: PowerPoint 2019 voor Mac volgt het beleid voor een vaste levenscyclus.
+  description: PowerPoint 2019 voor Mac volgt het vaste levenscyclusbeleid.
   ms.date: 07/28/2020
   ms.openlocfilehash: 3473ecb168eda39862d4e2c93f248d1105f892a3
   ms.sourcegitcommit: e15c32a90036b92acce9ef863cc808ad719160b8
-  ms.translationtype: MT
+  ms.translationtype: HT
   ms.contentlocale: nl-NL
   ms.lasthandoff: 07/29/2020
   ms.locfileid: "868784"
 name: PowerPoint 2019 voor Mac
 summary: >+
-  PowerPoint 2019 voor Mac volgt het beleid [voor een vaste](/lifecycle/policies/fixed) levenscyclus.
+  PowerPoint 2019 voor Mac volgt het [vaste](/lifecycle/policies/fixed) levenscyclusbeleid.
 
 
 products:
