--- a/lifecycle-data/products/skype-for-business-2016.yml
+++ b/lifecycle-data/products/skype-for-business-2016.yml
@@ -1,17 +1,17 @@
 ### YamlMime:Lifecycle
 metadata:
   title: Skype voor Bedrijven 2016
-  description: Skype voor Bedrijven 2016 volgt het beleid voor een vaste levenscyclus.
+  description: Skype voor Bedrijven 2016 volgt het vaste levenscyclusbeleid.
   ms.date: 07/28/2020
   ms.openlocfilehash: bb612be489d44c4dbac85d1fffce7797eaef57d2
   ms.sourcegitcommit: 6b0f0d4ac042ba924016a386cd23db5f1ed22756
-  ms.translationtype: MT
+  ms.translationtype: HT
   ms.contentlocale: nl-NL
   ms.lasthandoff: 07/29/2020
   ms.locfileid: "852040"
 name: Skype voor Bedrijven 2016
 summary: >+
-  Skype voor Bedrijven 2016 volgt het beleid voor een [vaste](/lifecycle/policies/fixed) levenscyclus.
+  Skype voor Bedrijven 2016 volgt het [vaste](/lifecycle/policies/fixed) levenscyclusbeleid.
 
 
 products:
