--- a/lifecycle-data/products/skype-for-business-2019.yml
+++ b/lifecycle-data/products/skype-for-business-2019.yml
@@ -1,17 +1,17 @@
 ### YamlMime:Lifecycle
 metadata:
   title: Skype voor Bedrijven 2019
-  description: Skype voor Bedrijven 2019 volgt het beleid voor vaste levenscyclus.
+  description: Skype voor Bedrijven 2019 volgt het vaste levenscyclusbeleid.
   ms.date: 07/28/2020
   ms.openlocfilehash: 0df52b63618e4bc7b7313685c975b8a89fd9ad11
   ms.sourcegitcommit: e15c32a90036b92acce9ef863cc808ad719160b8
-  ms.translationtype: MT
+  ms.translationtype: HT
   ms.contentlocale: nl-NL
   ms.lasthandoff: 07/29/2020
   ms.locfileid: "868766"
 name: Skype voor Bedrijven 2019
 summary: >+
-  Skype voor Bedrijven 2019 volgt het beleid [voor vaste](/lifecycle/policies/fixed) levenscyclus.
+  Skype voor Bedrijven 2019 volgt het [vaste](/lifecycle/policies/fixed) levenscyclusbeleid.
 
 
 products:
