--- a/lifecycle-data/products/skype-for-business-server-2015.yml
+++ b/lifecycle-data/products/skype-for-business-server-2015.yml
@@ -1,17 +1,17 @@
 ### YamlMime:Lifecycle
 metadata:
-  title: Skype voor Bedrijven Server 2015
-  description: Skype voor Bedrijven Server 2015 volgt het beleid voor vaste levenscyclus.
+  title: Skype for Business Server 2015
+  description: kype voor Bedrijven Server 2015 volgt het vaste levenscyclusbeleid.
   ms.date: 07/28/2020
   ms.openlocfilehash: 0b1c68ef26edf881dfbdf73321010694f372dc10
   ms.sourcegitcommit: 6b0f0d4ac042ba924016a386cd23db5f1ed22756
-  ms.translationtype: MT
+  ms.translationtype: HT
   ms.contentlocale: nl-NL
   ms.lasthandoff: 07/29/2020
   ms.locfileid: "852038"
-name: Skype voor Bedrijven Server 2015
+name: Skype for Business Server 2015
 summary: >+
-  Skype voor Bedrijven Server 2015 volgt het beleid [voor vaste](/lifecycle/policies/fixed) levenscyclus.
+  Skype voor Bedrijven Server 2015 volgt het [vaste](/lifecycle/policies/fixed) levenscyclusbeleid.
 
 
 products:
