--- a/lifecycle-data/products/storsimple-data-manager.yml
+++ b/lifecycle-data/products/storsimple-data-manager.yml
@@ -1,17 +1,17 @@
 ### YamlMime:Lifecycle
 metadata:
-  title: StorSimple Data Manager
-  description: StorSimple Data Manager volgt het beleid voor vaste levenscyclus.
+  title: StorSimple Datamanager
+  description: StorSimple Data Manager volgt het vaste levenscyclusbeleid.
   ms.date: 07/28/2020
   ms.openlocfilehash: cca889145816fcf7bde921df52a32be61a97a54d
   ms.sourcegitcommit: e15c32a90036b92acce9ef863cc808ad719160b8
-  ms.translationtype: MT
+  ms.translationtype: HT
   ms.contentlocale: nl-NL
   ms.lasthandoff: 07/29/2020
   ms.locfileid: "868744"
-name: StorSimple Data Manager
+name: StorSimple Datamanager
 summary: >+
-  StorSimple Data Manager volgt het beleid [voor vaste](/lifecycle/policies/fixed) levenscyclus.
+  StorSimple Data Manager volgt het [vaste](/lifecycle/policies/fixed) levenscyclusbeleid.
 
 
 products:
