--- a/lifecycle-data/products/system-center-2016-data-protection.yml
+++ b/lifecycle-data/products/system-center-2016-data-protection.yml
@@ -1,17 +1,17 @@
 ### YamlMime:Lifecycle
 metadata:
-  title: Gegevensbescherming van system center 2016
-  description: System Center 2016 Gegevensbescherming volgt het beleid voor vaste levenscyclus.
+  title: System Center 2016 Data Protection
+  description: System Center 2016 Data Protection volgt het vaste levenscyclusbeleid.
   ms.date: 07/28/2020
   ms.openlocfilehash: 7b2a2ebb813f79280e3a37ee9346697f601538a4
   ms.sourcegitcommit: 6b0f0d4ac042ba924016a386cd23db5f1ed22756
-  ms.translationtype: MT
+  ms.translationtype: HT
   ms.contentlocale: nl-NL
   ms.lasthandoff: 07/29/2020
   ms.locfileid: "852072"
-name: Gegevensbescherming van system center 2016
+name: System Center 2016 Data Protection
 summary: >+
-  System Center 2016 Gegevensbescherming volgt het beleid [voor vaste](/lifecycle/policies/fixed) levenscyclus.
+  System Center 2016 Data Protection volgt het [vaste](/lifecycle/policies/fixed) levenscyclusbeleid.
 
 
 products:
@@ -25,4 +25,4 @@ releases:
 - version: Original Release
   startDate: 10/28/2016
   endDate: 01/11/2027
-content: "\n## <a name=\"links\"></a>Verwijzigingen \n* [Productinformatie](/system-center/)"
+content: "\n## <a name=\"links\"></a>Koppelingen \n* [Productgegevens](/system-center/)"
