--- a/lifecycle-data/products/system-center-2016-orchestrator.yml
+++ b/lifecycle-data/products/system-center-2016-orchestrator.yml
@@ -1,17 +1,17 @@
 ### YamlMime:Lifecycle
 metadata:
   title: System Center 2016 Orchestrator
-  description: System Center 2016 Orchestrator volgt het beleid voor vaste levenscyclus.
+  description: System Center 2016 Orchestrator volgt het vaste levenscyclusbeleid.
   ms.date: 07/28/2020
   ms.openlocfilehash: c5725bbb0002c3952fb18ff688be105c808e190b
   ms.sourcegitcommit: 6b0f0d4ac042ba924016a386cd23db5f1ed22756
-  ms.translationtype: MT
+  ms.translationtype: HT
   ms.contentlocale: nl-NL
   ms.lasthandoff: 07/29/2020
   ms.locfileid: "852131"
 name: System Center 2016 Orchestrator
 summary: >+
-  System Center 2016 Orchestrator volgt het [beleid voor vaste](/lifecycle/policies/fixed) levenscyclus.
+  System Center 2016 Orchestrator volgt het [vaste](/lifecycle/policies/fixed) levenscyclusbeleid.
 
 
 products:
