--- a/lifecycle-data/products/system-center-2016-service-manager.yml
+++ b/lifecycle-data/products/system-center-2016-service-manager.yml
@@ -1,17 +1,17 @@
 ### YamlMime:Lifecycle
 metadata:
-  title: Servicemanager Systeemcentrum 2016
-  description: System Center 2016 Service Manager volgt het beleid voor vaste levenscyclus.
+  title: System Center 2016 Service Manager
+  description: System Center 2016 Service Manager volgt het vaste levenscyclusbeleid.
   ms.date: 07/28/2020
   ms.openlocfilehash: 324b4d018b20d596afdf61ff10658489d7f1d79f
   ms.sourcegitcommit: 6b0f0d4ac042ba924016a386cd23db5f1ed22756
-  ms.translationtype: MT
+  ms.translationtype: HT
   ms.contentlocale: nl-NL
   ms.lasthandoff: 07/29/2020
   ms.locfileid: "852130"
-name: Servicemanager Systeemcentrum 2016
+name: System Center 2016 Service Manager
 summary: >+
-  System Center 2016 Service Manager volgt het beleid [voor vaste](/lifecycle/policies/fixed) levenscyclus.
+  System Center 2016 Service Manager volgt het [vaste](/lifecycle/policies/fixed) levenscyclusbeleid.
 
 
 products:
