--- a/lifecycle-data/products/system-center-2016-virtual-machine-manager.yml
+++ b/lifecycle-data/products/system-center-2016-virtual-machine-manager.yml
@@ -1,17 +1,17 @@
 ### YamlMime:Lifecycle
 metadata:
-  title: Systeemcentrum 2016 Virtual Machine Manager
-  description: System Center 2016 Virtual Machine Manager volgt het beleid voor vaste levenscyclus.
+  title: System Center 2016 Virtual Machine Manager
+  description: System Center 2016 Virtual Machine Manager volgt het vaste levenscyclusbeleid.
   ms.date: 07/28/2020
   ms.openlocfilehash: 43bd64cf4f3bcde6c41718f57bddd96ccd63a8a6
   ms.sourcegitcommit: 6b0f0d4ac042ba924016a386cd23db5f1ed22756
-  ms.translationtype: MT
+  ms.translationtype: HT
   ms.contentlocale: nl-NL
   ms.lasthandoff: 07/29/2020
   ms.locfileid: "851954"
-name: Systeemcentrum 2016 Virtual Machine Manager
+name: System Center 2016 Virtual Machine Manager
 summary: >+
-  System Center 2016 Virtual Machine Manager volgt het beleid [voor vaste](/lifecycle/policies/fixed) levenscyclus.
+  System Center 2016 Virtual Machine Manager volgt het [vaste](/lifecycle/policies/fixed) levenscyclusbeleid.
 
 
 products:
