--- a/lifecycle-data/products/system-center-2019-orchestrator.yml
+++ b/lifecycle-data/products/system-center-2019-orchestrator.yml
@@ -1,17 +1,17 @@
 ### YamlMime:Lifecycle
 metadata:
   title: System Center 2019 Orchestrator
-  description: System Center 2019 Orchestrator volgt het beleid voor vaste levenscyclus.
+  description: System Center 2019 Orchestrator volgt het vaste levenscyclusbeleid.
   ms.date: 07/28/2020
   ms.openlocfilehash: 02f342dcd6e853e150a1546c6b168def7b19164f
   ms.sourcegitcommit: e15c32a90036b92acce9ef863cc808ad719160b8
-  ms.translationtype: MT
+  ms.translationtype: HT
   ms.contentlocale: nl-NL
   ms.lasthandoff: 07/29/2020
   ms.locfileid: "868811"
 name: System Center 2019 Orchestrator
 summary: >+
-  System Center 2019 Orchestrator volgt het [beleid voor vaste](/lifecycle/policies/fixed) levenscyclus.
+  System Center 2019 Orchestrator volgt het [vaste](/lifecycle/policies/fixed) levenscyclusbeleid.
 
 
 products:
@@ -25,4 +25,4 @@ releases:
 - version: Original Release
   startDate: 03/14/2019
   endDate: 04/09/2029
-content: "\n## <a name=\"links\"></a>Verwijzigingen \n* [Productinformatie](/system-center/)"
+content: "\n## <a name=\"links\"></a>Koppelingen \n* [Productgegevens](/system-center/)"
