--- a/lifecycle-data/products/system-center-2019-service-manager.yml
+++ b/lifecycle-data/products/system-center-2019-service-manager.yml
@@ -1,17 +1,17 @@
 ### YamlMime:Lifecycle
 metadata:
-  title: Servicemanager Systeemcentrum 2019
-  description: System Center 2019 Service Manager volgt het beleid voor vaste levenscyclus.
+  title: System Center 2019 Service Manager
+  description: System Center 2019 Service Manager volgt het vaste levenscyclusbeleid.
   ms.date: 07/28/2020
   ms.openlocfilehash: 488ee016cd574e0318bd9e0062bc2919299b89d8
   ms.sourcegitcommit: e15c32a90036b92acce9ef863cc808ad719160b8
-  ms.translationtype: MT
+  ms.translationtype: HT
   ms.contentlocale: nl-NL
   ms.lasthandoff: 07/29/2020
   ms.locfileid: "868810"
-name: Servicemanager Systeemcentrum 2019
+name: System Center 2019 Service Manager
 summary: >+
-  System Center 2019 Service Manager volgt het beleid [voor vaste](/lifecycle/policies/fixed) levenscyclus.
+  System Center 2019 Service Manager volgt het [vaste](/lifecycle/policies/fixed) levenscyclusbeleid.
 
 
 products:
@@ -25,4 +25,4 @@ releases:
 - version: Original Release
   startDate: 03/14/2019
   endDate: 04/09/2029
-content: "\n## <a name=\"links\"></a>Verwijzigingen \n* [Productinformatie](/system-center/)"
+content: "\n## <a name=\"links\"></a>Koppelingen \n* [Productgegevens](/system-center/)"
