--- a/lifecycle-data/products/user-experience-virtualization-uev-20.yml
+++ b/lifecycle-data/products/user-experience-virtualization-uev-20.yml
@@ -1,17 +1,17 @@
 ### YamlMime:Lifecycle
 metadata:
-  title: Virtualisatie van gebruikerservaring (UE-V) 2.0
-  description: User Experience Virtualization (UE-V) 2.0 volgt het beleid voor vaste levenscyclus.
+  title: User Experience Virtualization (UE-V) 2.0
+  description: User Experience Virtualization (UE-V) 2.0 volgt het vaste levenscyclusbeleid.
   ms.date: 07/28/2020
   ms.openlocfilehash: 3841751d17e2cfa1ffb201c687291390831cdb8b
   ms.sourcegitcommit: 6b0f0d4ac042ba924016a386cd23db5f1ed22756
-  ms.translationtype: MT
+  ms.translationtype: HT
   ms.contentlocale: nl-NL
   ms.lasthandoff: 07/29/2020
   ms.locfileid: "852063"
-name: Virtualisatie van gebruikerservaring (UE-V) 2.0
+name: User Experience Virtualization (UE-V) 2.0
 summary: >+
-  User Experience Virtualization (UE-V) 2.0 volgt het beleid [voor vaste](/lifecycle/policies/fixed) levenscyclus.
+  User Experience Virtualization (UE-V) 2.0 volgt het [vaste](/lifecycle/policies/fixed) levenscyclusbeleid.
 
 
 products:
