--- a/lifecycle-data/products/visual-studio-code.yml
+++ b/lifecycle-data/products/visual-studio-code.yml
@@ -1,17 +1,17 @@
 ### YamlMime:Lifecycle
 metadata:
-  title: Visual Studio-code
-  description: Visual Studio Code volgt het beleid voor moderne levenscyclus.
+  title: Visual Studio Code
+  description: Visual Studio Code volgt het moderne levenscyclusbeleid.
   ms.date: 07/28/2020
   ms.openlocfilehash: 3d0488c1baf7058618ba22280b0795ecf6e5a6b4
   ms.sourcegitcommit: 6b0f0d4ac042ba924016a386cd23db5f1ed22756
-  ms.translationtype: MT
+  ms.translationtype: HT
   ms.contentlocale: nl-NL
   ms.lasthandoff: 07/29/2020
   ms.locfileid: "852035"
-name: Visual Studio-code
+name: Visual Studio Code
 summary: >+
-  Visual Studio Code volgt het beleid voor [moderne](/lifecycle/policies/modern) levenscyclus.
+  Visual Studio Code volgt het [moderne](/lifecycle/policies/modern) levenscyclusbeleid.
 
 
 products:
@@ -22,4 +22,4 @@ supportDates:
 releases:
 - version: Original Release
   startDate: 04/14/2016
-content: "\n## <a name=\"links\"></a>Verwijzigingen \n* [Onderhoudsinformatie](/visualstudio/productinfo/vs-servicing-mac)"
+content: "\n## <a name=\"links\"></a>Koppelingen \n* [Onderhoudsinformatie](/visualstudio/productinfo/vs-servicing-mac)"
