--- a/lifecycle-data/products/visual-studio-lightswitch-2011.yml
+++ b/lifecycle-data/products/visual-studio-lightswitch-2011.yml
@@ -1,17 +1,17 @@
 ### YamlMime:Lifecycle
 metadata:
   title: Visual Studio LightSwitch 2011
-  description: Visual Studio LightSwitch 2011 volgt het beleid voor vaste levenscyclus.
+  description: Visual Studio LightSwitch 2011 volgt het vaste levenscyclusbeleid.
   ms.date: 07/28/2020
   ms.openlocfilehash: 12d219b05d3e82323d3d5d7b6dae25393afc1afb
   ms.sourcegitcommit: 6b0f0d4ac042ba924016a386cd23db5f1ed22756
-  ms.translationtype: MT
+  ms.translationtype: HT
   ms.contentlocale: nl-NL
   ms.lasthandoff: 07/29/2020
   ms.locfileid: "851900"
 name: Visual Studio LightSwitch 2011
 summary: >+
-  Visual Studio LightSwitch 2011 volgt het [beleid voor vaste](/lifecycle/policies/fixed) levenscyclus.
+  Visual Studio LightSwitch 2011 volgt het [vaste](/lifecycle/policies/fixed) levenscyclusbeleid.
 
 
 products:
@@ -25,4 +25,4 @@ releases:
 - version: Original Release
   startDate: 10/30/2011
   endDate: 01/11/2022
-content: "\n## <a name=\"links\"></a>Verwijzigingen \n* [LightSwitch LightSwitch](/visualstudio/productinfo/visual-studio-lightswitch-support-announcement)\n* [Power-apps](https://powerapps.microsoft.com/)\n\n> [!NOTE]\n> Visual Studio 2015 is de laatste release van Visual Studio met de LightSwitch tooling. We raden u aan Microsoft PowerApps te gebruiken voor nieuwe toepassingsontwikkeling."
+content: "\n## <a name=\"links\"></a>Koppelingen \n* [LightSwitch](/visualstudio/productinfo/visual-studio-lightswitch-support-announcement)\n* [Power Apps](https://powerapps.microsoft.com/)\n\n> [!NOTE]\n> Visual Studio 2015 is de nieuwste release van Visual Studio die de LightSwitch tooling bevat. Voor elke nieuwe toepassingsontwikkeling raden we het gebruik van Microsoft PowerApps aan."
