--- a/lifecycle-data/products/windows-embedded-compact-2013.yml
+++ b/lifecycle-data/products/windows-embedded-compact-2013.yml
@@ -1,17 +1,17 @@
 ### YamlMime:Lifecycle
 metadata:
   title: Windows Embedded Compact 2013
-  description: Windows Embedded Compact 2013 volgt het beleid voor vaste levenscyclus.
+  description: Windows Embedded Compact 2013 volgt het vaste levenscyclusbeleid.
   ms.date: 07/28/2020
   ms.openlocfilehash: 8a42d1b8d76efbc42465bf7d813ce0762a03db2b
   ms.sourcegitcommit: 6b0f0d4ac042ba924016a386cd23db5f1ed22756
-  ms.translationtype: MT
+  ms.translationtype: HT
   ms.contentlocale: nl-NL
   ms.lasthandoff: 07/29/2020
   ms.locfileid: "851943"
 name: Windows Embedded Compact 2013
 summary: >+
-  Windows Embedded Compact 2013 volgt het beleid [voor vaste](/lifecycle/policies/fixed) levenscyclus.
+  Windows Embedded Compact 2013 volgt het [vaste](/lifecycle/policies/fixed) levenscyclusbeleid.
 
 
 products:
