--- a/lifecycle-data/products/windows-home-server-2011.yml
+++ b/lifecycle-data/products/windows-home-server-2011.yml
@@ -1,17 +1,17 @@
 ### YamlMime:Lifecycle
 metadata:
   title: Windows Home Server 2011
-  description: Windows Home Server 2011 volgt het beleid voor vaste levenscyclus.
+  description: Windows Home Server 2011 volgt het vaste levenscyclusbeleid.
   ms.date: 07/28/2020
   ms.openlocfilehash: cd7602894a6ba0f2cda537685202a0f45f43443e
   ms.sourcegitcommit: 6b0f0d4ac042ba924016a386cd23db5f1ed22756
-  ms.translationtype: MT
+  ms.translationtype: HT
   ms.contentlocale: nl-NL
   ms.lasthandoff: 07/29/2020
   ms.locfileid: "852024"
 name: Windows Home Server 2011
 summary: >+
-  Windows Home Server 2011 volgt het beleid [voor vaste](/lifecycle/policies/fixed) levenscyclus.
+  Windows Home Server 2011 volgt het [vaste](/lifecycle/policies/fixed) levenscyclusbeleid.
 
 
 products:
