--- a/lifecycle-data/products/windows-thin-pc.yml
+++ b/lifecycle-data/products/windows-thin-pc.yml
@@ -1,17 +1,17 @@
 ### YamlMime:Lifecycle
 metadata:
-  title: Windows Thin-pc
-  description: Windows Thin PC volgt het beleid voor vaste levenscyclus.
+  title: Windows Thin PC
+  description: Windows Thin PC volgt het vaste levenscyclusbeleid.
   ms.date: 07/28/2020
   ms.openlocfilehash: 69f6537ffd5ab3d93b955bcaf9801eb52d241415
   ms.sourcegitcommit: 6b0f0d4ac042ba924016a386cd23db5f1ed22756
-  ms.translationtype: MT
+  ms.translationtype: HT
   ms.contentlocale: nl-NL
   ms.lasthandoff: 07/29/2020
   ms.locfileid: "851887"
-name: Windows Thin-pc
+name: Windows Thin PC
 summary: >+
-  Windows Thin PC volgt het beleid [voor vaste](/lifecycle/policies/fixed) levenscyclus.
+  Windows Thin PC volgt het [vaste](/lifecycle/policies/fixed) levenscyclusbeleid.
 
 
 products:
