--- a/lifecycle-data/products/word-2016-for-mac.yml
+++ b/lifecycle-data/products/word-2016-for-mac.yml
@@ -1,17 +1,17 @@
 ### YamlMime:Lifecycle
 metadata:
   title: Word 2016 voor Mac
-  description: Word 2016 voor Mac volgt het beleid voor vaste levenscyclus.
+  description: Word 2016 voor Mac volgt het vaste levenscyclusbeleid.
   ms.date: 07/28/2020
   ms.openlocfilehash: 71b901131d651cb74f4f8835f0ca834dd90dca79
   ms.sourcegitcommit: 6b0f0d4ac042ba924016a386cd23db5f1ed22756
-  ms.translationtype: MT
+  ms.translationtype: HT
   ms.contentlocale: nl-NL
   ms.lasthandoff: 07/29/2020
   ms.locfileid: "851727"
 name: Word 2016 voor Mac
 summary: >+
-  Word 2016 voor Mac volgt het beleid [voor vaste](/lifecycle/policies/fixed) levenscyclus.
+  Word 2016 voor Mac volgt het [vaste](/lifecycle/policies/fixed) levenscyclusbeleid.
 
 
 products:
