--- a/lifecycle-data/products/word-2019-for-mac.yml
+++ b/lifecycle-data/products/word-2019-for-mac.yml
@@ -1,17 +1,17 @@
 ### YamlMime:Lifecycle
 metadata:
   title: Word 2019 voor Mac
-  description: Word 2019 voor Mac volgt het beleid voor vaste levenscyclus.
+  description: Word 2019 voor Mac volgt het vaste levenscyclusbeleid.
   ms.date: 07/28/2020
   ms.openlocfilehash: 1964df2585a0fcc2dd4a91be7e3bf54e44ea06ad
   ms.sourcegitcommit: e15c32a90036b92acce9ef863cc808ad719160b8
-  ms.translationtype: MT
+  ms.translationtype: HT
   ms.contentlocale: nl-NL
   ms.lasthandoff: 07/29/2020
   ms.locfileid: "868820"
 name: Word 2019 voor Mac
 summary: >+
-  Word 2019 voor Mac volgt het beleid [voor vaste](/lifecycle/policies/fixed) levenscyclus.
+  Word 2019 voor Mac volgt het [vaste](/lifecycle/policies/fixed) levenscyclusbeleid.
 
 
 products:
