--- a/lifecycle-data/products/silverlight-4.yml
+++ b/lifecycle-data/products/silverlight-4.yml
@@ -1,17 +1,17 @@
 ### YamlMime:Lifecycle
 metadata:
   title: Silverlight 4
-  description: Silverlight 4 volgt het vaste levenscyclus beleid.
+  description: Silverlight 4 volgt het vaste levenscyclusbeleid.
   ms.date: 08/19/2020
   ms.openlocfilehash: 9635d31459c8a470c63cc90e216e4237ce7c6ca1
   ms.sourcegitcommit: acbc3d1849bad925ef030cf951960bd7eb1b4e42
-  ms.translationtype: MT
+  ms.translationtype: HT
   ms.contentlocale: nl-NL
   ms.lasthandoff: 08/19/2020
   ms.locfileid: "903985"
 name: Silverlight 4
 summary: >+
-  Silverlight 4 volgt het [vaste](/lifecycle/policies/fixed) levenscyclus beleid.
+  Silverlight 4 volgt het [vaste](/lifecycle/policies/fixed) levenscyclusbeleid.
 
 
 products:
@@ -24,4 +24,4 @@ releases:
 - version: Original Release
   startDate: 04/15/2010
   endDate: 01/08/2013
-content: "\n\n> [!NOTE]\n> Microsoft biedt een minimum van 12 maanden na het beëindigen van de ondersteuning van tools."
+content: "\n\n> [!NOTE]\n> Microsoft zal minimaal 12 maanden van tevoren melden dat de ondersteuning voor Hulpprogramma's wordt beëindigd."
