--- a/lifecycle-data/products/adxstudio-portals-v6x-or-prior.yml
+++ b/lifecycle-data/products/adxstudio-portals-v6x-or-prior.yml
@@ -1,17 +1,17 @@
 ### YamlMime:Lifecycle
 metadata:
-  title: Adxstudio portals V6. x of eerder
-  description: Adxstudio portals V6. x of eerder volgt het vaste levenscyclus beleid.
+  title: Adxstudio Portals v6.x of vorige
+  description: Adxstudio Portals v6.x of vorige volgt het vaste levenscyclusbeleid.
   ms.date: 08/28/2020
   ms.openlocfilehash: d30568ac94980a8ea178e1971f3841f5093514fa
   ms.sourcegitcommit: 570c824dbe19150d37398333df7d2c416a51eac9
-  ms.translationtype: MT
+  ms.translationtype: HT
   ms.contentlocale: nl-NL
   ms.lasthandoff: 08/28/2020
   ms.locfileid: "924348"
-name: Adxstudio portals V6. x of eerder
+name: Adxstudio Portals v6.x of vorige
 summary: >+
-  Adxstudio portals V6. x of eerder volgt het [vaste](/lifecycle/policies/fixed) levenscyclus beleid.
+  Adxstudio Portals v6.x of vorige volgt het [vaste](/lifecycle/policies/fixed) levenscyclusbeleid.
 
 
 products:
@@ -24,4 +24,4 @@ releases:
 - version: Original Release
   startDate: 09/29/2015
   endDate: 04/12/2016
-content: "\n## <a name=\"links\"></a>Koppelingen \n* [Veelgestelde vragen over de levenscyclus-acquisities](/lifecycle/faq/general-lifecycle#what-is-the-lifecycle-policy-for-products-or-companies-that-microsoft-acquires)\n\n> [!NOTE]\n> Ondersteuning voor dit product is onderworpen aan de voorwaarden van de aankoop ervan en is beëindigd."
+content: "\n## <a name=\"links\"></a>Koppelingen \n* [Veelgestelde vragen over de levenscyclus - Verwervingen](/lifecycle/faq/general-lifecycle#what-is-the-lifecycle-policy-for-products-or-companies-that-microsoft-acquires)\n\n> [!NOTE]\n> Ondersteuning voor dit product is onderworpen aan de voorwaarden van de verwerving en is beëindigd."
