--- a/lifecycle-data/products/biztalk-adapter-for-web-services-enhancement-20.yml
+++ b/lifecycle-data/products/biztalk-adapter-for-web-services-enhancement-20.yml
@@ -1,17 +1,17 @@
 ### YamlMime:Lifecycle
 metadata:
-  title: BizTalk adapter for Web Services Enhancement 2,0
-  description: BizTalk adapter for Web Services Enhancement 2,0 volgt het vaste levenscyclus beleid.
+  title: BizTalk Adapter voor Web Services Enhancement 2.0
+  description: BizTalk Adapter voor Web Services Enhancement 2.0 volgt het vaste levenscyclusbeleid.
   ms.date: 08/19/2020
   ms.openlocfilehash: 4b442c30ed4d826959b43220b1b964c1c7d3419a
   ms.sourcegitcommit: acbc3d1849bad925ef030cf951960bd7eb1b4e42
-  ms.translationtype: MT
+  ms.translationtype: HT
   ms.contentlocale: nl-NL
   ms.lasthandoff: 08/19/2020
   ms.locfileid: "903986"
-name: BizTalk adapter for Web Services Enhancement 2,0
+name: BizTalk Adapter voor Web Services Enhancement 2.0
 summary: >+
-  BizTalk adapter for Web Services Enhancement 2,0 volgt het [vaste](/lifecycle/policies/fixed) levenscyclus beleid.
+  BizTalk Adapter voor Web Services Enhancement 2.0 volgt het [vaste](/lifecycle/policies/fixed) levenscyclusbeleid.
 
 
 products:
