--- a/lifecycle-data/products/dynamics-365-layout.yml
+++ b/lifecycle-data/products/dynamics-365-layout.yml
@@ -1,17 +1,17 @@
 ### YamlMime:Lifecycle
 metadata:
-  title: Dynamics 365-indeling
-  description: Dynamics 365-indeling met het moderne levenscyclus beleid.
+  title: Dynamics 365 Layout
+  description: Dynamics 365 Layout volgt het moderne levenscyclusbeleid.
   ms.date: 08/12/2020
   ms.openlocfilehash: 1995274fb40f9ea278629e50c290def57f7f113d
   ms.sourcegitcommit: 1974bfc9a9fccaac36daaa1015b7f31c8814ae07
-  ms.translationtype: MT
+  ms.translationtype: HT
   ms.contentlocale: nl-NL
   ms.lasthandoff: 08/12/2020
   ms.locfileid: "891837"
-name: Dynamics 365-indeling
+name: Dynamics 365 Layout
 summary: >+
-  Dynamics 365-indeling met het [moderne](/lifecycle/policies/modern) levenscyclus beleid.
+  Dynamics 365 Layout volgt het [moderne](/lifecycle/policies/modern) levenscyclusbeleid.
 
 
 products:
@@ -24,4 +24,4 @@ releases:
 - version: Original Release
   startDate: 09/30/2018
   endDate: 12/31/2021
-content: "\n## <a name=\"links\"></a>Verbindingen \n* [Layout en hulp op afstand](/dynamics365/mixed-reality/layout/faq)\n* [De overgang van de Dynamics 365-indeling aangekondigd](https://dynamics.microsoft.com/mixed-reality/layout-transition/)"
+content: "\n## <a name=\"links\"></a>Koppelingen \n* [Layout en Remote Assist](/dynamics365/mixed-reality/layout/faq)\n* [Aankondiging van de overgang van Dynamics 365 Layout](https://dynamics.microsoft.com/mixed-reality/layout-transition/)"
