--- a/lifecycle-data/products/dynamics-365-product-insights.yml
+++ b/lifecycle-data/products/dynamics-365-product-insights.yml
@@ -1,17 +1,17 @@
 ### YamlMime:Lifecycle
 metadata:
-  title: Dynamics 365 product inzichten
-  description: Dynamics 365 product inzichten volgen het moderne levenscyclus beleid.
+  title: Dynamics 365 Product Insights
+  description: Dynamics 365 Product Insights volgt het moderne levenscyclusbeleid.
   ms.date: 08/25/2020
   ms.openlocfilehash: 96ad93ad104312327e146d10a83d6b42943ab714
   ms.sourcegitcommit: d28d18dd801693302858cb5086cabb3a5d2083f3
-  ms.translationtype: MT
+  ms.translationtype: HT
   ms.contentlocale: nl-NL
   ms.lasthandoff: 08/26/2020
   ms.locfileid: "911350"
-name: Dynamics 365 product inzichten
+name: Dynamics 365 Product Insights
 summary: >+
-  Dynamics 365 product inzichten volgen het [moderne](/lifecycle/policies/modern) levenscyclus beleid.
+  Dynamics 365 Product Insights volgt het [moderne](/lifecycle/policies/modern) levenscyclusbeleid.
 
 
 products:
