--- a/lifecycle-data/products/dynamics-pos-20.yml
+++ b/lifecycle-data/products/dynamics-pos-20.yml
@@ -1,17 +1,17 @@
 ### YamlMime:Lifecycle
 metadata:
-  title: Dynamics POS 2,0
-  description: Dynamics POS 2,0 volgt het vaste levenscyclus beleid.
+  title: Dynamics POS 2.0
+  description: Dynamics POS 2.0 volgt het vaste levenscyclusbeleid.
   ms.date: 08/19/2020
   ms.openlocfilehash: 3d3243b12c58bd8aa66c9dbb674fa5a471a3407e
   ms.sourcegitcommit: 9d254d51934063ec1dd8c7e0e5fcb53ccc7257b3
-  ms.translationtype: MT
+  ms.translationtype: HT
   ms.contentlocale: nl-NL
   ms.lasthandoff: 08/20/2020
   ms.locfileid: "904835"
-name: Dynamics POS 2,0
+name: Dynamics POS 2.0
 summary: >+
-  Dynamics POS 2,0 volgt het [vaste](/lifecycle/policies/fixed) levenscyclus beleid.
+  Dynamics POS 2.0 volgt het [vaste](/lifecycle/policies/fixed) levenscyclusbeleid.
 
 
 products:
