--- a/lifecycle-data/products/forefront-protection-2010-for-sharepoint.yml
+++ b/lifecycle-data/products/forefront-protection-2010-for-sharepoint.yml
@@ -1,17 +1,17 @@
 ### YamlMime:Lifecycle
 metadata:
-  title: Forefront-beveiligings 2010 voor SharePoint
-  description: Forefront-beveiliging 2010 voor SharePoint volgt het vaste levenscyclus beleid.
+  title: Forefront Protection 2010 for SharePoint
+  description: Forefront Protection 2010 for SharePoint volgt het vaste levenscyclusbeleid.
   ms.date: 08/21/2020
   ms.openlocfilehash: cb0b92034979bf559cc72ac5d6b6302d3e986f39
   ms.sourcegitcommit: 2f3e18a9447115504ef274bd044dbcdb08231f5b
-  ms.translationtype: MT
+  ms.translationtype: HT
   ms.contentlocale: nl-NL
   ms.lasthandoff: 08/25/2020
   ms.locfileid: "908688"
-name: Forefront-beveiligings 2010 voor SharePoint
+name: Forefront Protection 2010 for SharePoint
 summary: >+
-  Forefront-beveiliging 2010 voor SharePoint volgt het [vaste](/lifecycle/policies/fixed) levenscyclus beleid.
+  Forefront Protection 2010 for SharePoint volgt het [vaste](/lifecycle/policies/fixed) levenscyclusbeleid.
 
 
 products:
@@ -24,4 +24,4 @@ releases:
 - version: Original Release
   startDate: 07/15/2010
   endDate: 12/31/2015
-content: "\n\n> [!NOTE]\n> De routekaart voor beveiligingsproducten onder het Forefront-merk is gewijzigd. Dit product wordt stopgezet vanaf 31 december 2015."
+content: "\n\n> [!NOTE]\n> De roadmap voor de beveiligingsproducten onder het merk Forefront is veranderd.  Dit product wordt per 31 december 2015 stopgezet.\n\n\n"
