--- a/lifecycle-data/products/forefront-security-for-office-communications-server.yml
+++ b/lifecycle-data/products/forefront-security-for-office-communications-server.yml
@@ -1,17 +1,17 @@
 ### YamlMime:Lifecycle
 metadata:
-  title: Forefront beveiliging voor Office Communications Server
-  description: Forefront Security for Office Communications Server volgt het vaste levenscyclus beleid.
+  title: Forefront Security for Office Communications Server
+  description: Forefront Security for Office Communications Server volgt het vaste levenscyclusbeleid.
   ms.date: 08/21/2020
   ms.openlocfilehash: 5f0144e2e7f36644a959dccab8e1da4696e8c230
   ms.sourcegitcommit: 2f3e18a9447115504ef274bd044dbcdb08231f5b
-  ms.translationtype: MT
+  ms.translationtype: HT
   ms.contentlocale: nl-NL
   ms.lasthandoff: 08/25/2020
   ms.locfileid: "908687"
-name: Forefront beveiliging voor Office Communications Server
+name: Forefront Security for Office Communications Server
 summary: >+
-  Forefront Security for Office Communications Server volgt het [vaste](/lifecycle/policies/fixed) levenscyclus beleid.
+  Forefront Security for Office Communications Server volgt het [vaste](/lifecycle/policies/fixed) levenscyclusbeleid.
 
 
 products:
@@ -24,4 +24,4 @@ releases:
 - version: RTM
   startDate: 06/09/2009
   endDate: 12/31/2015
-content: "\n\n> [!NOTE]\n> De routekaart voor beveiligingsproducten onder het Forefront-merk is gewijzigd. Dit product wordt stopgezet vanaf 31 december 2015."
+content: "\n\n> [!NOTE]\n> De roadmap voor de beveiligingsproducten onder het merk Forefront is veranderd.  Dit product wordt per 31 december 2015 stopgezet.\n\n\n"
