--- a/lifecycle-data/products/microsoft-edge-legacy.yml
+++ b/lifecycle-data/products/microsoft-edge-legacy.yml
@@ -1,23 +1,23 @@
 ### YamlMime:Lifecycle
 metadata:
-  title: Microsoft Edge verouderd
-  description: Microsoft Edge verouderde beloopt het onderdeel levenscyclus beleid.
+  title: Microsoft Edge Legacy
+  description: Microsoft Edge Legacy volgt het levenscyclusbeleid voor onderdelen.
   ms.date: 08/24/2020
   ms.openlocfilehash: e3739694176a49b69fa121857ed8740523a36816
   ms.sourcegitcommit: 2f3e18a9447115504ef274bd044dbcdb08231f5b
-  ms.translationtype: MT
+  ms.translationtype: HT
   ms.contentlocale: nl-NL
   ms.lasthandoff: 08/25/2020
   ms.locfileid: "908689"
-name: Microsoft Edge verouderd
+name: Microsoft Edge Legacy
 summary: >
-  Microsoft Edge verouderde beloopt het [onderdeel](/lifecycle/faq/fixed-policy#how-is-a-component-supported-under-the-fixed-lifecycle-policy) levenscyclus beleid.
+  Microsoft Edge Legacy volgt het levenscyclusbeleid voor [onderdelen](/lifecycle/faq/fixed-policy#how-is-a-component-supported-under-the-fixed-lifecycle-policy).
 
 
 
   > [!IMPORTANT]
 
-  > Houd er rekening mee dat de ondersteuning voor dit product eindigt op 9 maart 2021. Ga [naar](https://techcommunity.microsoft.com/t5/microsoft-365-blog/microsoft-365-apps-say-farewell-to-internet-explorer-11-and/ba-p/1591666) voor meer informatie.
+  > Houd er rekening meet dat de ondersteuning voor dit product op 9 maart 2021 wordt beëindigd. Volg [deze koppeling](https://techcommunity.microsoft.com/t5/microsoft-365-blog/microsoft-365-apps-say-farewell-to-internet-explorer-11-and/ba-p/1591666) voor meer informatie.
 products:
 - microsoft-edge
 policyType: component
