--- a/lifecycle-data/products/microsoft-playready-server-software-development-kit-.yml
+++ b/lifecycle-data/products/microsoft-playready-server-software-development-kit-.yml
@@ -1,17 +1,17 @@
 ### YamlMime:Lifecycle
 metadata:
   title: 'Microsoft PlayReady Server Software Development Kit '
-  description: Microsoft PlayReady Server Software Development Kit volgt het vaste levenscyclus beleid.
+  description: Microsoft PlayReady Server Software Development Kit volgt het vaste levenscyclusbeleid.
   ms.date: 08/21/2020
   ms.openlocfilehash: ad1436e285d41225be4fd96438e78cecfe455916
   ms.sourcegitcommit: c4013bce086aedc575584ea34b1acb5c27d06a1b
-  ms.translationtype: MT
+  ms.translationtype: HT
   ms.contentlocale: nl-NL
   ms.lasthandoff: 08/21/2020
   ms.locfileid: "908016"
 name: 'Microsoft PlayReady Server Software Development Kit '
 summary: >+
-  Microsoft PlayReady Server Software Development Kit volgt het [vaste](/lifecycle/policies/fixed) levenscyclus beleid.
+  Microsoft PlayReady Server Software Development Kit volgt het [vaste](/lifecycle/policies/fixed) levenscyclusbeleid.
 
 
 products:
