--- a/lifecycle-data/products/microsoft-playready-server-software-development-kit-20.yml
+++ b/lifecycle-data/products/microsoft-playready-server-software-development-kit-20.yml
@@ -1,17 +1,17 @@
 ### YamlMime:Lifecycle
 metadata:
-  title: Microsoft PlayReady Server Software Development Kit 2,0
-  description: De 2,0 Development Kit voor Microsoft PlayReady server wordt gevolgd door het vaste Lifecycle-beleid
+  title: Microsoft PlayReady Server Software Development Kit 2.0
+  description: Microsoft PlayReady Server Software Development Kit 2.0 volgt het vaste levenscyclusbeleid.
   ms.date: 08/21/2020
   ms.openlocfilehash: 61635292b88f853a5daeda3ffcc766a1786e42cd
   ms.sourcegitcommit: c4013bce086aedc575584ea34b1acb5c27d06a1b
-  ms.translationtype: MT
+  ms.translationtype: HT
   ms.contentlocale: nl-NL
   ms.lasthandoff: 08/21/2020
   ms.locfileid: "908053"
-name: Microsoft PlayReady Server Software Development Kit 2,0
+name: Microsoft PlayReady Server Software Development Kit 2.0
 summary: >+
-  De 2,0 Development Kit voor Microsoft PlayReady server wordt gevolgd door het [vaste](/lifecycle/policies/fixed) Lifecycle-beleid
+  Microsoft PlayReady Server Software Development Kit 2.0 volgt het [vaste](/lifecycle/policies/fixed) levenscyclusbeleid.
 
 
 products:
