--- a/lifecycle-data/products/microsoft-report-viewer.yml
+++ b/lifecycle-data/products/microsoft-report-viewer.yml
@@ -1,17 +1,17 @@
 ### YamlMime:Lifecycle
 metadata:
   title: Microsoft Report Viewer
-  description: Microsoft Report Viewer volgt het moderne levenscyclus beleid.
+  description: Microsoft Report Viewer volgt het moderne levenscyclusbeleid.
   ms.date: 08/19/2020
   ms.openlocfilehash: 9025fd3d1b84a581d70de562ab977e3aa01870fb
   ms.sourcegitcommit: 9d254d51934063ec1dd8c7e0e5fcb53ccc7257b3
-  ms.translationtype: MT
+  ms.translationtype: HT
   ms.contentlocale: nl-NL
   ms.lasthandoff: 08/20/2020
   ms.locfileid: "904832"
 name: Microsoft Report Viewer
 summary: >+
-  Microsoft Report Viewer volgt het [moderne](/lifecycle/policies/modern) levenscyclus beleid.
+  Microsoft Report Viewer volgt het [moderne](/lifecycle/policies/modern) levenscyclusbeleid.
 
 
 products:
