--- a/lifecycle-data/products/microsoft-works.yml
+++ b/lifecycle-data/products/microsoft-works.yml
@@ -1,17 +1,17 @@
 ### YamlMime:Lifecycle
 metadata:
   title: Microsoft Works
-  description: Microsoft doet het vaste levenscyclus beleid volgen.
+  description: Microsoft Works volgt het vaste levenscyclusbeleid.
   ms.date: 08/19/2020
   ms.openlocfilehash: da68f15014771676be04285328ffde3ff1c49858
   ms.sourcegitcommit: acbc3d1849bad925ef030cf951960bd7eb1b4e42
-  ms.translationtype: MT
+  ms.translationtype: HT
   ms.contentlocale: nl-NL
   ms.lasthandoff: 08/19/2020
   ms.locfileid: "903994"
 name: Microsoft Works
 summary: >+
-  Microsoft doet het [vaste](/lifecycle/policies/fixed) levenscyclus beleid volgen.
+  Microsoft Works volgt het [vaste](/lifecycle/policies/fixed) levenscyclusbeleid.
 
 
 products:
@@ -39,4 +39,4 @@ releases:
 - version: Microsoft Works Suite 2004
   startDate: 10/25/2003
   endDate: 01/09/2007
-content: "\n\n> [!NOTE]\n> Deze vermelding bevat alle Microsoft Works-producten die zijn uitgebracht tussen 2003 en 2007."
+content: "\n\n> [!NOTE]\n> Deze vermelding bevat alle Microsoft Works-producten die tussen 2003 en 2007 zijn uitgebracht."
