--- a/lifecycle-data/products/pixelsense-applications-suite-10.yml
+++ b/lifecycle-data/products/pixelsense-applications-suite-10.yml
@@ -1,17 +1,17 @@
 ### YamlMime:Lifecycle
 metadata:
-  title: PixelSense toepassingen Suite 1,0
-  description: PixelSense toepassingen Suite 1,0 volgt het vaste levenscyclus beleid.
+  title: PixelSense Applications Suite 1.0
+  description: PixelSense Applications Suite 1.0 volgt het vaste levenscyclusbeleid.
   ms.date: 08/12/2020
   ms.openlocfilehash: c74536304840d0d75306a3d6d2609d8a39c524dc
   ms.sourcegitcommit: 1974bfc9a9fccaac36daaa1015b7f31c8814ae07
-  ms.translationtype: MT
+  ms.translationtype: HT
   ms.contentlocale: nl-NL
   ms.lasthandoff: 08/12/2020
   ms.locfileid: "892011"
-name: PixelSense toepassingen Suite 1,0
+name: PixelSense Applications Suite 1.0
 summary: >+
-  PixelSense toepassingen Suite 1,0 volgt het [vaste](/lifecycle/policies/fixed) levenscyclus beleid.
+  PixelSense Applications Suite 1.0 volgt het [vaste](/lifecycle/policies/fixed) levenscyclusbeleid.
 
 
 products:
