--- a/lifecycle-data/products/pixelsense-commercial-hardware-10.yml
+++ b/lifecycle-data/products/pixelsense-commercial-hardware-10.yml
@@ -1,17 +1,17 @@
 ### YamlMime:Lifecycle
 metadata:
-  title: PixelSense commerciële hardware 1,0
-  description: PixelSense commerciële hardware 1,0 volgt het vaste levenscyclus beleid.
+  title: PixelSense Commercial Hardware 1.0
+  description: PixelSense Commercial Hardware 1.0 volgt het vaste levenscyclusbeleid.
   ms.date: 08/12/2020
   ms.openlocfilehash: 634e2d48b4c7d357f681ff4e485456080fba7853
   ms.sourcegitcommit: c7c4e0a2e3a93e251df1f1cdc0e078a7787b3dc3
-  ms.translationtype: MT
+  ms.translationtype: HT
   ms.contentlocale: nl-NL
   ms.lasthandoff: 08/13/2020
   ms.locfileid: "893893"
-name: PixelSense commerciële hardware 1,0
+name: PixelSense Commercial Hardware 1.0
 summary: >+
-  PixelSense commerciële hardware 1,0 volgt het [vaste](/lifecycle/policies/fixed) levenscyclus beleid.
+  PixelSense Commercial Hardware 1.0 volgt het [vaste](/lifecycle/policies/fixed) levenscyclusbeleid.
 
 
 products:
