--- a/lifecycle-data/products/system-center-endpoint-protection.yml
+++ b/lifecycle-data/products/system-center-endpoint-protection.yml
@@ -1,17 +1,17 @@
 ### YamlMime:Lifecycle
 metadata:
-  title: System Center-beveiliging
-  description: Endpoint Protection van System Center volgt het moderne levenscyclus beleid.
+  title: System Center Endpoint Protection
+  description: System Center Endpoint Protection volgt het moderne levenscyclusbeleid.
   ms.date: 08/31/2020
   ms.openlocfilehash: 9eff57919f329c3c5897ef2697cd20ff9ce65dba
   ms.sourcegitcommit: ea12743df11002fd494c7843707a3628dfedb425
-  ms.translationtype: MT
+  ms.translationtype: HT
   ms.contentlocale: nl-NL
   ms.lasthandoff: 08/31/2020
   ms.locfileid: "924922"
-name: System Center-beveiliging
+name: System Center Endpoint Protection
 summary: >+
-  Endpoint Protection van System Center volgt het [moderne](/lifecycle/policies/modern) levenscyclus beleid.
+  System Center Endpoint Protection volgt het [moderne](/lifecycle/policies/modern) levenscyclusbeleid.
 
 
 products:
