--- a/lifecycle-data/products/test-agent-controller.yml
+++ b/lifecycle-data/products/test-agent-controller.yml
@@ -1,17 +1,17 @@
 ### YamlMime:Lifecycle
 metadata:
-  title: Test agent, controller
-  description: Test agent, controller volgt het levenscyclus beleid van de component.
+  title: Test Agent, Controller
+  description: Test Agent, Controller volgt het levenscyclusbeleid voor onderdelen.
   ms.date: 08/13/2020
   ms.openlocfilehash: 7cb3e4327582e2dcb0c2d9fd448fff1aa31d6c81
   ms.sourcegitcommit: 3c6b83bda986f678312f44c1a8424e183a327d5c
-  ms.translationtype: MT
+  ms.translationtype: HT
   ms.contentlocale: nl-NL
   ms.lasthandoff: 08/14/2020
   ms.locfileid: "894948"
-name: Test agent, controller
+name: Test Agent, Controller
 summary: >+
-  Test agent, controller volgt het levenscyclus beleid van de [component](/lifecycle/faq/fixed-policy#how-is-a-component-supported-under-the-fixed-lifecycle-policy) .
+  Test Agent, Controller volgt het levenscyclusbeleid voor [onderdelen](/lifecycle/faq/fixed-policy#how-is-a-component-supported-under-the-fixed-lifecycle-policy).
 
 
 products:
