--- a/lifecycle-data/products/whale-communications-intelligent-application-gateway.yml
+++ b/lifecycle-data/products/whale-communications-intelligent-application-gateway.yml
@@ -1,17 +1,17 @@
 ### YamlMime:Lifecycle
 metadata:
   title: Whale Communications Intelligent Application Gateway
-  description: Whale Communications Intelligent Application Gateway volgt het vaste levenscyclus beleid.
+  description: Whale Communications Intelligent Application Gateway volgt het vaste levenscyclusbeleid.
   ms.date: 08/21/2020
   ms.openlocfilehash: 4946cfbd0c53706853138bd707157a5c318b8dc6
   ms.sourcegitcommit: bc7fcda30191f92db77ed2e7f74d5816ac276a55
-  ms.translationtype: MT
+  ms.translationtype: HT
   ms.contentlocale: nl-NL
   ms.lasthandoff: 08/21/2020
   ms.locfileid: "907135"
 name: Whale Communications Intelligent Application Gateway
 summary: >+
-  Whale Communications Intelligent Application Gateway volgt het [vaste](/lifecycle/policies/fixed) levenscyclus beleid.
+  Whale Communications Intelligent Application Gateway volgt het [vaste](/lifecycle/policies/fixed) levenscyclusbeleid.
 
 
 products:
