--- a/lifecycle-data/products/windows-live-onecare.yml
+++ b/lifecycle-data/products/windows-live-onecare.yml
@@ -1,17 +1,17 @@
 ### YamlMime:Lifecycle
 metadata:
   title: Windows Live OneCare
-  description: Windows Live OneCare volgt het moderne levenscyclus beleid.
+  description: Windows Live OneCare volgt het moderne levenscyclusbeleid.
   ms.date: 08/19/2020
   ms.openlocfilehash: f37abdbbca933797a22116b3c1aaf794ac0cd1a2
   ms.sourcegitcommit: 7058ee1673709d6dd4bed24f043690e0da2c6bb4
-  ms.translationtype: MT
+  ms.translationtype: HT
   ms.contentlocale: nl-NL
   ms.lasthandoff: 08/19/2020
   ms.locfileid: "902726"
 name: Windows Live OneCare
 summary: >+
-  Windows Live OneCare volgt het [moderne](/lifecycle/policies/modern) levenscyclus beleid.
+  Windows Live OneCare volgt het [moderne](/lifecycle/policies/modern) levenscyclusbeleid.
 
 
 products:
