--- a/lifecycle-data/products/windows-moviemaker-20.yml
+++ b/lifecycle-data/products/windows-moviemaker-20.yml
@@ -1,17 +1,17 @@
 ### YamlMime:Lifecycle
 metadata:
-  title: Windows MovieMaker 2,0
-  description: Windows MovieMaker 2,0 volgt het vaste levenscyclus beleid.
+  title: Windows MovieMaker 2.0
+  description: Windows MovieMaker 2.0 volgt het vaste levenscyclusbeleid.
   ms.date: 08/18/2020
   ms.openlocfilehash: dc2c02cb856f1d4cd277b6db2d9a8610b5a3163d
   ms.sourcegitcommit: 7058ee1673709d6dd4bed24f043690e0da2c6bb4
-  ms.translationtype: MT
+  ms.translationtype: HT
   ms.contentlocale: nl-NL
   ms.lasthandoff: 08/19/2020
   ms.locfileid: "902725"
-name: Windows MovieMaker 2,0
+name: Windows MovieMaker 2.0
 summary: >+
-  Windows MovieMaker 2,0 volgt het [vaste](/lifecycle/policies/fixed) levenscyclus beleid.
+  Windows MovieMaker 2.0 volgt het [vaste](/lifecycle/policies/fixed) levenscyclusbeleid.
 
 
 products:
