commit translated contents

--- a/lifecycle-data/products/microsoft-office-word-2003.yml
+++ b/lifecycle-data/products/microsoft-office-word-2003.yml
@@ -1,18 +1,18 @@
 ### YamlMime:Lifecycle
 metadata:
   title: Microsoft Office Word 2003
-  description: Microsoft Office Word 2003 volgt het vaste levenscyclus beleid.
+  description: Microsoft Office Word 2003 volgt het vaste levenscyclusbeleid.
   ms.date: 09/01/2020
   keywords: Standard
   ms.openlocfilehash: ac7b10f977be3928db5cfc26c23f7fa734106e86
   ms.sourcegitcommit: af46dd09ccdabd80dcc49d2cd930cefa0b1ab8a6
-  ms.translationtype: MT
+  ms.translationtype: HT
   ms.contentlocale: nl-NL
   ms.lasthandoff: 09/01/2020
   ms.locfileid: "930079"
 name: Microsoft Office Word 2003
 summary: >+
-  Microsoft Office Word 2003 volgt het [vaste](/lifecycle/policies/fixed) levenscyclus beleid.
+  Microsoft Office Word 2003 volgt het [vaste](/lifecycle/policies/fixed) levenscyclusbeleid.
 
 
   Dit is van toepassing op de volgende edities: Standard
