--- a/lifecycle-data/products/microsoft-powerpoint-2010.yml
+++ b/lifecycle-data/products/microsoft-powerpoint-2010.yml
@@ -1,18 +1,18 @@
 ### YamlMime:Lifecycle
 metadata:
   title: Microsoft PowerPoint 2010
-  description: Microsoft PowerPoint 2010 volgt het vaste levenscyclus beleid.
+  description: Microsoft PowerPoint 2010 volgt het vaste levenscyclusbeleid.
   ms.date: 09/01/2020
   keywords: Home and Student,Standard
   ms.openlocfilehash: 456aacd4e7c600f852b3a7fb169afc68163bf95c
   ms.sourcegitcommit: af46dd09ccdabd80dcc49d2cd930cefa0b1ab8a6
-  ms.translationtype: MT
+  ms.translationtype: HT
   ms.contentlocale: nl-NL
   ms.lasthandoff: 09/01/2020
   ms.locfileid: "930042"
 name: Microsoft PowerPoint 2010
 summary: >+
-  Microsoft PowerPoint 2010 volgt het [vaste](/lifecycle/policies/fixed) levenscyclus beleid.
+  Microsoft PowerPoint 2010 volgt het [vaste](/lifecycle/policies/fixed) levenscyclusbeleid.
 
 
   Dit is van toepassing op de volgende edities: Thuisgebruik en Studenten, Standaard
