--- a/lifecycle-data/products/publisher-2010.yml
+++ b/lifecycle-data/products/publisher-2010.yml
@@ -1,18 +1,18 @@
 ### YamlMime:Lifecycle
 metadata:
   title: Publisher 2010
-  description: Publisher 2010 volgt het vaste levenscyclus beleid.
+  description: Publisher 2010 volgt het vaste levenscyclusbeleid.
   ms.date: 09/01/2020
   keywords: Standard
   ms.openlocfilehash: 73037ae31d902bde1b7d7f2a41fe29a4f4c101cd
   ms.sourcegitcommit: af46dd09ccdabd80dcc49d2cd930cefa0b1ab8a6
-  ms.translationtype: MT
+  ms.translationtype: HT
   ms.contentlocale: nl-NL
   ms.lasthandoff: 09/01/2020
   ms.locfileid: "926231"
 name: Publisher 2010
 summary: >+
-  Publisher 2010 volgt het [vaste](/lifecycle/policies/fixed) levenscyclus beleid.
+  Publisher 2010 volgt het [vaste](/lifecycle/policies/fixed) levenscyclusbeleid.
 
 
   Dit is van toepassing op de volgende edities: Standard
