--- a/lifecycle-data/products/publisher-2013.yml
+++ b/lifecycle-data/products/publisher-2013.yml
@@ -1,18 +1,18 @@
 ### YamlMime:Lifecycle
 metadata:
   title: Publisher 2013
-  description: Publisher 2013 volgt het vaste levenscyclus beleid.
+  description: Publisher 2013 volgt het vaste levenscyclusbeleid.
   ms.date: 09/01/2020
   keywords: Standard
   ms.openlocfilehash: 351331904acc01202c407f88c65b40ec18af6907
   ms.sourcegitcommit: af46dd09ccdabd80dcc49d2cd930cefa0b1ab8a6
-  ms.translationtype: MT
+  ms.translationtype: HT
   ms.contentlocale: nl-NL
   ms.lasthandoff: 09/01/2020
   ms.locfileid: "926157"
 name: Publisher 2013
 summary: >+
-  Publisher 2013 volgt het [vaste](/lifecycle/policies/fixed) levenscyclus beleid.
+  Publisher 2013 volgt het [vaste](/lifecycle/policies/fixed) levenscyclusbeleid.
 
 
   Dit is van toepassing op de volgende edities: Standard
