--- a/lifecycle-data/products/excel-2013.yml
+++ b/lifecycle-data/products/excel-2013.yml
@@ -1,18 +1,18 @@
 ### YamlMime:Lifecycle
 metadata:
   title: Excel 2013
-  description: Excel 2013 volgt het vaste levenscyclus beleid.
+  description: Excel 2013 volgt het vaste levenscyclusbeleid.
   ms.date: 09/01/2020
   keywords: Standard
   ms.openlocfilehash: a61ea8a7812cf8f0588cedf137009800c888809c
   ms.sourcegitcommit: af46dd09ccdabd80dcc49d2cd930cefa0b1ab8a6
-  ms.translationtype: MT
+  ms.translationtype: HT
   ms.contentlocale: nl-NL
   ms.lasthandoff: 09/01/2020
   ms.locfileid: "931522"
 name: Excel 2013
 summary: >+
-  Excel 2013 volgt het [vaste](/lifecycle/policies/fixed) levenscyclus beleid.
+  Excel 2013 volgt het [vaste](/lifecycle/policies/fixed) levenscyclusbeleid.
 
 
   Dit is van toepassing op de volgende edities: Standard
