--- a/lifecycle-data/products/excel-2019.yml
+++ b/lifecycle-data/products/excel-2019.yml
@@ -1,18 +1,18 @@
 ### YamlMime:Lifecycle
 metadata:
   title: Excel 2019
-  description: Excel 2019 volgt het vaste levenscyclus beleid.
+  description: Excel 2019 volgt het vaste levenscyclusbeleid.
   ms.date: 09/01/2020
   keywords: Standard
   ms.openlocfilehash: a143712b29fb51ca6867c7c65c6b39b05beeb13d
   ms.sourcegitcommit: af46dd09ccdabd80dcc49d2cd930cefa0b1ab8a6
-  ms.translationtype: MT
+  ms.translationtype: HT
   ms.contentlocale: nl-NL
   ms.lasthandoff: 09/01/2020
   ms.locfileid: "931411"
 name: Excel 2019
 summary: >+
-  Excel 2019 volgt het [vaste](/lifecycle/policies/fixed) levenscyclus beleid.
+  Excel 2019 volgt het [vaste](/lifecycle/policies/fixed) levenscyclusbeleid.
 
 
   Dit is van toepassing op de volgende edities: Standard
