--- a/lifecycle-data/products/gpovault.yml
+++ b/lifecycle-data/products/gpovault.yml
@@ -1,21 +1,21 @@
 ### YamlMime:Lifecycle
 metadata:
   title: GPOVault
-  description: GPOVault volgt het vaste levenscyclus beleid.
+  description: GPOVault volgt het vaste levenscyclusbeleid.
   ms.date: 09/01/2020
   keywords: 1.0,2.0,Enterprise 1.0,Enterprise 2.0
   ms.openlocfilehash: 9b9051b56046f5f3605b877b3562039ea241bfe3
   ms.sourcegitcommit: af46dd09ccdabd80dcc49d2cd930cefa0b1ab8a6
-  ms.translationtype: MT
+  ms.translationtype: HT
   ms.contentlocale: nl-NL
   ms.lasthandoff: 09/01/2020
   ms.locfileid: "935999"
 name: GPOVault
 summary: >+
-  GPOVault volgt het [vaste](/lifecycle/policies/fixed) levenscyclus beleid.
+  GPOVault volgt het [vaste](/lifecycle/policies/fixed) levenscyclusbeleid.
 
 
-  Dit geldt voor de volgende edities: 1,0, 2,0, Enterprise 1,0, Enterprise 2,0
+  Dit is van toepassing op de volgende edities: 1.0, 2.0, Enterprise 1.0, Enterprise 2.0
 
 products:
 - windows
@@ -27,4 +27,4 @@ releases:
 - version: Original Release
   startDate: 01/01/2007
   endDate: 01/12/2010
-content: "\n\n> [!NOTE]\n> Ondersteuning voor dit product is onderworpen aan de voorwaarden van zijn aanschaf. \n\n## <a name=\"editions\"></a>Edities \n* 1,0\n* 2,0\n* Enterprise 1,0\n* Enterprise 2,0"
+content: "\n\n> [!NOTE]\n> Ondersteuning voor dit product is onderworpen aan de voorwaarden van zijn aanschaf. \n\n## <a name=\"editions\"></a>Edities \n* 1.0\n* 2.0\n* Enterprise 1.0\n* Enterprise 2.0"
