--- a/lifecycle-data/products/microsoft-biztalk-adapter-20.yml
+++ b/lifecycle-data/products/microsoft-biztalk-adapter-20.yml
@@ -1,21 +1,21 @@
 ### YamlMime:Lifecycle
 metadata:
-  title: Microsoft BizTalk adapter 2,0
-  description: Microsoft BizTalk adapter 2,0 volgt het vaste levenscyclus beleid.
+  title: Microsoft BizTalk Adapter 2.0
+  description: Microsoft BizTalk Adapter 2.0 volgt het vaste levenscyclusbeleid.
   ms.date: 09/01/2020
   keywords: for MSMQ,for mySAP Business Suite,for SAP
   ms.openlocfilehash: e6ccc3e11575a0d48e60228fa8eca4d1e4849669
   ms.sourcegitcommit: af46dd09ccdabd80dcc49d2cd930cefa0b1ab8a6
-  ms.translationtype: MT
+  ms.translationtype: HT
   ms.contentlocale: nl-NL
   ms.lasthandoff: 09/01/2020
   ms.locfileid: "934741"
-name: Microsoft BizTalk adapter 2,0
+name: Microsoft BizTalk Adapter 2.0
 summary: >+
-  Microsoft BizTalk adapter 2,0 volgt het [vaste](/lifecycle/policies/fixed) levenscyclus beleid.
+  Microsoft BizTalk Adapter 2.0 volgt het [vaste](/lifecycle/policies/fixed) levenscyclusbeleid.
 
 
-  Dit geldt voor de volgende edities: voor MSMQ, voor mySAP Business Suite voor SAP
+  Dit geldt voor de volgende edities: voor MSMQ, voor mySAP Business Suite, voor SAP
 
 products:
 - microsoft-servers
@@ -28,4 +28,4 @@ releases:
 - version: Original Release
   startDate: 10/20/2004
   endDate: 01/13/2015
-content: "\n\n> [!NOTE]\n> De begindatum van Microsoft BizTalk adapter 2,0 voor SAP is 2 november 2004. De begindatum van Microsoft BizTalk adapter voor MSMQ 2,0 is 10 december 2004\n\n## <a name=\"editions\"></a>Edities \n* voor MSMQ\n* voor mySAP Business Suite\n* voor SAP"
+content: "\n\n> [!NOTE]\n> De begindatum voor Microsoft BizTalk Adapter 2.0 voor SAP is 2 november 2004. De begindatum voor Microsoft BizTalk Adapter voor MSMQ 2.0 is 10 december 2004\n\n## <a name=\"editions\"></a>Edities \n* voor MSMQ\n* voor mySAP Business Suite\n* voor SAP"
