--- a/lifecycle-data/products/microsoft-class-server-30.yml
+++ b/lifecycle-data/products/microsoft-class-server-30.yml
@@ -1,18 +1,18 @@
 ### YamlMime:Lifecycle
 metadata:
-  title: Microsoft class Server 3,0
-  description: Microsoft-Klasseserver 3,0 volgt het vaste levenscyclus beleid.
+  title: Microsoft Class Server 3.0
+  description: Microsoft Class Server 3.0 volgt het vaste levenscyclusbeleid.
   ms.date: 09/01/2020
   keywords: Standard
   ms.openlocfilehash: 1d14c56151ecf68d4493cea9a79047eee7df4bd2
   ms.sourcegitcommit: af46dd09ccdabd80dcc49d2cd930cefa0b1ab8a6
-  ms.translationtype: MT
+  ms.translationtype: HT
   ms.contentlocale: nl-NL
   ms.lasthandoff: 09/01/2020
   ms.locfileid: "934630"
-name: Microsoft class Server 3,0
+name: Microsoft Class Server 3.0
 summary: >+
-  Microsoft-Klasseserver 3,0 volgt het [vaste](/lifecycle/policies/fixed) levenscyclus beleid.
+  Microsoft Class Server 3.0 volgt het [vaste](/lifecycle/policies/fixed) levenscyclusbeleid.
 
 
   Dit is van toepassing op de volgende edities: Standard
