--- a/lifecycle-data/products/microsoft-internet-security-and-acceleration-server-2004.yml
+++ b/lifecycle-data/products/microsoft-internet-security-and-acceleration-server-2004.yml
@@ -1,17 +1,17 @@
 ### YamlMime:Lifecycle
 metadata:
-  title: Microsoft Internet Security en Acceleration Server 2004
-  description: Microsoft Internet Security en Acceleration Server 2004 volgt het vaste levenscyclus beleid.
+  title: Microsoft Internet Security and Acceleration Server 2004
+  description: Microsoft Internet Security and Acceleration Server 2004 volgt het vaste levenscyclusbeleid.
   ms.date: 09/01/2020
   keywords: Enterprise,Standard
   ms.openlocfilehash: ca985b778607eed3132ccd8345127d379543f4ff
   ms.sourcegitcommit: af46dd09ccdabd80dcc49d2cd930cefa0b1ab8a6
-  ms.translationtype: MT
+  ms.translationtype: HT
   ms.contentlocale: nl-NL
   ms.lasthandoff: 09/01/2020
   ms.locfileid: "933483"
-name: Microsoft Internet Security en Acceleration Server 2004
-summary: "Microsoft Internet Security en Acceleration Server 2004 volgt het [vaste](/lifecycle/policies/fixed) levenscyclus beleid.\n\nDit is van toepassing op de volgende edities: Enterprise, Standard\n\n> [!IMPORTANT]\n> De ondersteuning voor dit product is beëindigd. \n"
+name: Microsoft Internet Security and Acceleration Server 2004
+summary: "Microsoft Internet Security and Acceleration Server 2004 volgt het [vaste](/lifecycle/policies/fixed) levenscyclusbeleid.\n\nDit is van toepassing op de volgende edities: Enterprise, Standard\n\n> [!IMPORTANT]\n> De ondersteuning voor dit product is beëindigd. \n"
 products:
 - microsoft-servers
 policyType: fixed
