--- a/lifecycle-data/products/microsoft-lync-2010.yml
+++ b/lifecycle-data/products/microsoft-lync-2010.yml
@@ -1,21 +1,21 @@
 ### YamlMime:Lifecycle
 metadata:
   title: Microsoft Lync 2010
-  description: Microsoft Lync 2010 volgt het vaste levenscyclus beleid.
+  description: Microsoft Lync 2010 volgt het vaste levenscyclusbeleid.
   ms.date: 09/01/2020
   keywords: Attendant,Attendee,Group Chat,Standard
   ms.openlocfilehash: c3db784bc5a889bab9f8c319ddb04361993c453a
   ms.sourcegitcommit: af46dd09ccdabd80dcc49d2cd930cefa0b1ab8a6
-  ms.translationtype: MT
+  ms.translationtype: HT
   ms.contentlocale: nl-NL
   ms.lasthandoff: 09/01/2020
   ms.locfileid: "933446"
 name: Microsoft Lync 2010
 summary: >+
-  Microsoft Lync 2010 volgt het [vaste](/lifecycle/policies/fixed) levenscyclus beleid.
+  Microsoft Lync 2010 volgt het [vaste](/lifecycle/policies/fixed) levenscyclusbeleid.
 
 
-  Dit geldt voor de volgende edities: Attendant, attendee, Group chat, Standard
+  Dit is van toepassing op de volgende edities: Attendant, Deelnemer, Groepschat, Standaard
 
 products:
 - office
@@ -28,4 +28,4 @@ releases:
 - version: Original Release
   startDate: 01/25/2011
   endDate: 04/13/2021
-content: "\n\n\n## <a name=\"editions\"></a>Edities \n* Eigen\n* Deelnemer\n* Een groepsgesprek voeren\n* Standard"
+content: "\n\n\n## <a name=\"editions\"></a>Edities \n* Attendant\n* Deelnemer\n* Groepschat\n* Standard"
