--- a/lifecycle-data/products/microsoft-mediaroom.yml
+++ b/lifecycle-data/products/microsoft-mediaroom.yml
@@ -1,21 +1,21 @@
 ### YamlMime:Lifecycle
 metadata:
   title: Microsoft Mediaroom
-  description: Microsoft Mediaroom volgt het vaste levenscyclus beleid.
+  description: Microsoft Mediaroom volgt het vaste levenscyclusbeleid.
   ms.date: 09/01/2020
   keywords: Application Services 1.0,Client 2.0,Client 2.1,Server 2.0,Server 2.1
   ms.openlocfilehash: 5842b1725e7c5cbc964de743111a400d2b7de2b9
   ms.sourcegitcommit: af46dd09ccdabd80dcc49d2cd930cefa0b1ab8a6
-  ms.translationtype: MT
+  ms.translationtype: HT
   ms.contentlocale: nl-NL
   ms.lasthandoff: 09/01/2020
   ms.locfileid: "930597"
 name: Microsoft Mediaroom
 summary: >+
-  Microsoft Mediaroom volgt het [vaste](/lifecycle/policies/fixed) levenscyclus beleid.
+  Microsoft Mediaroom volgt het [vaste](/lifecycle/policies/fixed) levenscyclusbeleid.
 
 
-  Dit geldt voor de volgende edities: Application Services 1,0, client 2,0, client 2,1, Server 2,0, Server 2,1
+  Dit is van toepassing op de volgende edities: Application Services 1.0, Client 2.0, Client 2.1, Server 2.0, Server 2.1
 
 products:
 - windows
@@ -25,4 +25,4 @@ supportDates:
 releases:
 - version: Original Release
   startDate: 08/03/2010
-content: "\n\n> [!NOTE]\n> Ericsson heeft Microsoft Mediaroom-producten aangeschaft in 2013. Voor meer informatie raadpleegt u de [pers versie](http://www.ericsson.com/news/1691160). Voor klanten die ondersteuning nodig hebben, kijk dan [hier](https://sharepoint.partners.extranet.microsoft.com/sites/mediaroom/informationresources/lifecycle.aspx).\n> [!NOTE]\n> Microsoft Mediaroom client 2,1 is uitgebracht op 27 december 2011. \n\n## <a name=\"editions\"></a>Edities \n* Toepassings Services 1,0\n* Client 2,0\n* Client 2,1\n* Server 2,0\n* Server 2,1"
+content: "\n\n> [!NOTE]\n> Ericsson heeft in 2013 Microsoft Mediaroom-producten overgenomen. Raadpleeg het [persbericht](http://www.ericsson.com/news/1691160) voor meer informatie. Voor klanten die ondersteuning nodig hebben, klik [hier](https://sharepoint.partners.extranet.microsoft.com/sites/mediaroom/informationresources/lifecycle.aspx).\n> [!NOTE]\n> Microsoft Mediaroom Client 2.1 werd op 27 december 2011 uitgebracht. \n\n## <a name=\"editions\"></a>Edities \n* Application Services 1.0\n* Client 2.0\n* Client 2.1\n* Server 2.0\n* Server 2.1"
