--- a/lifecycle-data/products/microsoft-onenote-2010.yml
+++ b/lifecycle-data/products/microsoft-onenote-2010.yml
@@ -1,18 +1,18 @@
 ### YamlMime:Lifecycle
 metadata:
   title: Microsoft OneNote 2010
-  description: Microsoft OneNote 2010 volgt het vaste levenscyclus beleid.
+  description: Microsoft OneNote 2010 volgt het vaste levenscyclusbeleid.
   ms.date: 09/01/2020
   keywords: Home and Student,Standard
   ms.openlocfilehash: 77b655ee28e25cc13cd7134c7730dffec4b2e899
   ms.sourcegitcommit: af46dd09ccdabd80dcc49d2cd930cefa0b1ab8a6
-  ms.translationtype: MT
+  ms.translationtype: HT
   ms.contentlocale: nl-NL
   ms.lasthandoff: 09/01/2020
   ms.locfileid: "932706"
 name: Microsoft OneNote 2010
 summary: >+
-  Microsoft OneNote 2010 volgt het [vaste](/lifecycle/policies/fixed) levenscyclus beleid.
+  Microsoft OneNote 2010 volgt het [vaste](/lifecycle/policies/fixed) levenscyclusbeleid.
 
 
   Dit is van toepassing op de volgende edities: Thuisgebruik en Studenten, Standaard
