--- a/lifecycle-data/products/microsoft-onenote-2013.yml
+++ b/lifecycle-data/products/microsoft-onenote-2013.yml
@@ -1,18 +1,18 @@
 ### YamlMime:Lifecycle
 metadata:
   title: Microsoft OneNote 2013
-  description: Microsoft OneNote 2013 volgt het vaste levenscyclus beleid.
+  description: Microsoft OneNote 2013 volgt het vaste levenscyclusbeleid.
   ms.date: 09/01/2020
   keywords: Standard
   ms.openlocfilehash: 7a07605f91f495b4b6b7c3eeecebd907f403b9f1
   ms.sourcegitcommit: af46dd09ccdabd80dcc49d2cd930cefa0b1ab8a6
-  ms.translationtype: MT
+  ms.translationtype: HT
   ms.contentlocale: nl-NL
   ms.lasthandoff: 09/01/2020
   ms.locfileid: "932558"
 name: Microsoft OneNote 2013
 summary: >+
-  Microsoft OneNote 2013 volgt het [vaste](/lifecycle/policies/fixed) levenscyclus beleid.
+  Microsoft OneNote 2013 volgt het [vaste](/lifecycle/policies/fixed) levenscyclusbeleid.
 
 
   Dit is van toepassing op de volgende edities: Standard
