--- a/lifecycle-data/products/microsoft-speech-server-2004.yml
+++ b/lifecycle-data/products/microsoft-speech-server-2004.yml
@@ -1,18 +1,18 @@
 ### YamlMime:Lifecycle
 metadata:
   title: Microsoft Speech Server 2004
-  description: Microsoft Speech Server 2004 volgt het vaste levenscyclus beleid.
+  description: Microsoft Speech Server 2004 volgt het vaste levenscyclusbeleid.
   ms.date: 09/01/2020
   keywords: Enterprise,Standard
   ms.openlocfilehash: 2fb4a48b2caffce89e54dac838ff7f1149886d48
   ms.sourcegitcommit: af46dd09ccdabd80dcc49d2cd930cefa0b1ab8a6
-  ms.translationtype: MT
+  ms.translationtype: HT
   ms.contentlocale: nl-NL
   ms.lasthandoff: 09/01/2020
   ms.locfileid: "937072"
 name: Microsoft Speech Server 2004
 summary: >+
-  Microsoft Speech Server 2004 volgt het [vaste](/lifecycle/policies/fixed) levenscyclus beleid.
+  Microsoft Speech Server 2004 volgt het [vaste](/lifecycle/policies/fixed) levenscyclusbeleid.
 
 
   Dit is van toepassing op de volgende edities: Enterprise, Standard
