--- a/lifecycle-data/products/microsoft-system-center-essentials-2010.yml
+++ b/lifecycle-data/products/microsoft-system-center-essentials-2010.yml
@@ -1,21 +1,21 @@
 ### YamlMime:Lifecycle
 metadata:
   title: Microsoft System Center Essentials 2010
-  description: Microsoft System Center Essentials 2010 volgt het vaste levenscyclus beleid.
+  description: Microsoft System Center Essentials 2010 volgt het vaste levenscyclusbeleid.
   ms.date: 09/01/2020
   keywords: All applicable,wSQL
   ms.openlocfilehash: 93f05c6b49b851871ea5d7f6a2066310ae3144e2
   ms.sourcegitcommit: af46dd09ccdabd80dcc49d2cd930cefa0b1ab8a6
-  ms.translationtype: MT
+  ms.translationtype: HT
   ms.contentlocale: nl-NL
   ms.lasthandoff: 09/01/2020
   ms.locfileid: "938182"
 name: Microsoft System Center Essentials 2010
 summary: >+
-  Microsoft System Center Essentials 2010 volgt het [vaste](/lifecycle/policies/fixed) levenscyclus beleid.
+  Microsoft System Center Essentials 2010 volgt het [vaste](/lifecycle/policies/fixed) levenscyclusbeleid.
 
 
-  Dit geldt voor de volgende versies: alle van toepassing zijnde wSQL
+  Dit geldt voor de volgende edities: Allemaal van toepassing, wSQL
 
 products:
 - msc
