--- a/lifecycle-data/products/microsoft-visual-foxpro-80-professional-edition.yml
+++ b/lifecycle-data/products/microsoft-visual-foxpro-80-professional-edition.yml
@@ -1,21 +1,21 @@
 ### YamlMime:Lifecycle
 metadata:
-  title: Microsoft Visual FoxPro 8,0 Professional Edition
-  description: Microsoft Visual FoxPro 8,0 Professional Edition volgt het vaste levenscyclus beleid.
+  title: Microsoft Visual FoxPro 8.0 Professional Edition
+  description: Microsoft Visual FoxPro 8.0 Professional Edition volgt het vaste levenscyclusbeleid.
   ms.date: 09/01/2020
   keywords: Professional
   ms.openlocfilehash: f1a877392c50fc6e526869f7269b728b9dd727cd
   ms.sourcegitcommit: af46dd09ccdabd80dcc49d2cd930cefa0b1ab8a6
-  ms.translationtype: MT
+  ms.translationtype: HT
   ms.contentlocale: nl-NL
   ms.lasthandoff: 09/01/2020
   ms.locfileid: "929038"
-name: Microsoft Visual FoxPro 8,0 Professional Edition
+name: Microsoft Visual FoxPro 8.0 Professional Edition
 summary: >+
-  Microsoft Visual FoxPro 8,0 Professional Edition volgt het [vaste](/lifecycle/policies/fixed) levenscyclus beleid.
+  Microsoft Visual FoxPro 8.0 Professional Edition volgt het [vaste](/lifecycle/policies/fixed) levenscyclusbeleid.
 
 
-  Dit geldt voor de volgende edities: Professional
+  Dit is van toepassing op de volgende edities: Professional
 
 products:
 - vs
