--- a/lifecycle-data/products/microsoft-visual-foxpro-90.yml
+++ b/lifecycle-data/products/microsoft-visual-foxpro-90.yml
@@ -1,21 +1,21 @@
 ### YamlMime:Lifecycle
 metadata:
-  title: Microsoft Visual FoxPro 9,0
-  description: Microsoft Visual FoxPro 9,0 volgt het vaste levenscyclus beleid.
+  title: Microsoft Visual FoxPro 9.0
+  description: Microsoft Visual FoxPro 9.0 volgt het vaste levenscyclusbeleid.
   ms.date: 09/01/2020
   keywords: Professional
   ms.openlocfilehash: 689e9849afd320715a3f700c08beee645de18060
   ms.sourcegitcommit: af46dd09ccdabd80dcc49d2cd930cefa0b1ab8a6
-  ms.translationtype: MT
+  ms.translationtype: HT
   ms.contentlocale: nl-NL
   ms.lasthandoff: 09/01/2020
   ms.locfileid: "929302"
-name: Microsoft Visual FoxPro 9,0
+name: Microsoft Visual FoxPro 9.0
 summary: >+
-  Microsoft Visual FoxPro 9,0 volgt het [vaste](/lifecycle/policies/fixed) levenscyclus beleid.
+  Microsoft Visual FoxPro 9.0 volgt het [vaste](/lifecycle/policies/fixed) levenscyclusbeleid.
 
 
-  Dit geldt voor de volgende edities: Professional
+  Dit is van toepassing op de volgende edities: Professional
 
 products:
 - vs
