--- a/lifecycle-data/products/microsoft-visual-sourcesafe-2005.yml
+++ b/lifecycle-data/products/microsoft-visual-sourcesafe-2005.yml
@@ -1,18 +1,18 @@
 ### YamlMime:Lifecycle
 metadata:
   title: Microsoft Visual SourceSafe 2005
-  description: Microsoft Visual SourceSafe 2005 volgt het vaste levenscyclus beleid.
+  description: Microsoft Visual SourceSafe 2005 volgt het vaste levenscyclusbeleid.
   ms.date: 09/01/2020
   keywords: Standard
   ms.openlocfilehash: f7d67637da3426c4d3852deec2e86b2910ea3424
   ms.sourcegitcommit: af46dd09ccdabd80dcc49d2cd930cefa0b1ab8a6
-  ms.translationtype: MT
+  ms.translationtype: HT
   ms.contentlocale: nl-NL
   ms.lasthandoff: 09/01/2020
   ms.locfileid: "937627"
 name: Microsoft Visual SourceSafe 2005
 summary: >+
-  Microsoft Visual SourceSafe 2005 volgt het [vaste](/lifecycle/policies/fixed) levenscyclus beleid.
+  Microsoft Visual SourceSafe 2005 volgt het [vaste](/lifecycle/policies/fixed) levenscyclusbeleid.
 
 
   Dit is van toepassing op de volgende edities: Standard
