--- a/lifecycle-data/products/microsoft-word-2010.yml
+++ b/lifecycle-data/products/microsoft-word-2010.yml
@@ -1,18 +1,18 @@
 ### YamlMime:Lifecycle
 metadata:
   title: Microsoft Word 2010
-  description: Microsoft Word 2010 volgt het vaste levenscyclus beleid.
+  description: Microsoft Word 2010 volgt het vaste levenscyclusbeleid.
   ms.date: 09/01/2020
   keywords: Home and Student,Standard
   ms.openlocfilehash: 23a0866d6135a39d7b7895604cc2c3687c5f578f
   ms.sourcegitcommit: af46dd09ccdabd80dcc49d2cd930cefa0b1ab8a6
-  ms.translationtype: MT
+  ms.translationtype: HT
   ms.contentlocale: nl-NL
   ms.lasthandoff: 09/01/2020
   ms.locfileid: "929006"
 name: Microsoft Word 2010
 summary: >+
-  Microsoft Word 2010 volgt het [vaste](/lifecycle/policies/fixed) levenscyclus beleid.
+  Microsoft Word 2010 volgt het [vaste](/lifecycle/policies/fixed) levenscyclusbeleid.
 
 
   Dit is van toepassing op de volgende edities: Thuisgebruik en Studenten, Standaard
