--- a/lifecycle-data/products/office-xp.yml
+++ b/lifecycle-data/products/office-xp.yml
@@ -1,21 +1,21 @@
 ### YamlMime:Lifecycle
 metadata:
   title: Office XP
-  description: In Office XP wordt het vaste levenscyclus beleid gevolgd.
+  description: Office XP volgt het vaste levenscyclusbeleid.
   ms.date: 09/01/2020
   keywords: Developer,Professional,Proofing Tools,Standard,Web Components
   ms.openlocfilehash: 5f0e3d5738f2f2107926d4cfe9c46de77fa5a875
   ms.sourcegitcommit: af46dd09ccdabd80dcc49d2cd930cefa0b1ab8a6
-  ms.translationtype: MT
+  ms.translationtype: HT
   ms.contentlocale: nl-NL
   ms.lasthandoff: 09/01/2020
   ms.locfileid: "928784"
 name: Office XP
 summary: >+
-  In Office XP wordt het [vaste](/lifecycle/policies/fixed) levenscyclus beleid gevolgd.
+  Office XP volgt het [vaste](/lifecycle/policies/fixed) levenscyclusbeleid.
 
 
-  Dit geldt voor de volgende edities: ontwikkelaars, professionele functies, Taalprogramma's, Standard, Web Components
+  Dit is van toepassing op de volgende edities: Developer, Professional, Taalprogramma's, Standaard, Web Components
 
 products:
 - office
