--- a/lifecycle-data/products/outlook-2013.yml
+++ b/lifecycle-data/products/outlook-2013.yml
@@ -1,18 +1,18 @@
 ### YamlMime:Lifecycle
 metadata:
   title: Outlook 2013
-  description: Outlook 2013 volgt het vaste levenscyclus beleid.
+  description: Outlook 2013 volgt het vaste levenscyclusbeleid.
   ms.date: 09/01/2020
   keywords: Standard
   ms.openlocfilehash: 2678d0bb53f3c29f23028aa934729776d1c73d7c
   ms.sourcegitcommit: af46dd09ccdabd80dcc49d2cd930cefa0b1ab8a6
-  ms.translationtype: MT
+  ms.translationtype: HT
   ms.contentlocale: nl-NL
   ms.lasthandoff: 09/01/2020
   ms.locfileid: "926786"
 name: Outlook 2013
 summary: >+
-  Outlook 2013 volgt het [vaste](/lifecycle/policies/fixed) levenscyclus beleid.
+  Outlook 2013 volgt het [vaste](/lifecycle/policies/fixed) levenscyclusbeleid.
 
 
   Dit is van toepassing op de volgende edities: Standard
