--- a/lifecycle-data/products/outlook-2019.yml
+++ b/lifecycle-data/products/outlook-2019.yml
@@ -1,18 +1,18 @@
 ### YamlMime:Lifecycle
 metadata:
   title: Outlook 2019
-  description: Outlook 2019 volgt het vaste levenscyclus beleid.
+  description: Outlook 2019 volgt het vaste levenscyclusbeleid.
   ms.date: 09/01/2020
   keywords: Standard
   ms.openlocfilehash: 8c38b0d1da85e6f534d902ac0349bdd657a68684
   ms.sourcegitcommit: af46dd09ccdabd80dcc49d2cd930cefa0b1ab8a6
-  ms.translationtype: MT
+  ms.translationtype: HT
   ms.contentlocale: nl-NL
   ms.lasthandoff: 09/01/2020
   ms.locfileid: "938071"
 name: Outlook 2019
 summary: >+
-  Outlook 2019 volgt het [vaste](/lifecycle/policies/fixed) levenscyclus beleid.
+  Outlook 2019 volgt het [vaste](/lifecycle/policies/fixed) levenscyclusbeleid.
 
 
   Dit is van toepassing op de volgende edities: Standard
