--- a/lifecycle-data/products/policymaker.yml
+++ b/lifecycle-data/products/policymaker.yml
@@ -1,21 +1,21 @@
 ### YamlMime:Lifecycle
 metadata:
-  title: Beleidsmaker
-  description: De beleidsinstelling van de beleidsregels voor de vaststelling van de levenscyclus.
+  title: PolicyMaker
+  description: PolicyMaker volgt het vaste levenscyclusbeleid.
   ms.date: 09/01/2020
   keywords: Application Security,Outlook Edition,Professional 9.0,Registry Extension 2.0,Share Manager 1.0,Software Update 1.0,Software Update 2.0,Standard 1.0,Standard 2.0
   ms.openlocfilehash: be11ae6bee427a5aa059ec56cb88f007bb5134ec
   ms.sourcegitcommit: af46dd09ccdabd80dcc49d2cd930cefa0b1ab8a6
-  ms.translationtype: MT
+  ms.translationtype: HT
   ms.contentlocale: nl-NL
   ms.lasthandoff: 09/01/2020
   ms.locfileid: "938034"
-name: Beleidsmaker
+name: PolicyMaker
 summary: >+
-  De beleidsinstelling van de beleidsregels voor de [vaststelling](/lifecycle/policies/fixed) van de levenscyclus.
+  PolicyMaker volgt het [vaste](/lifecycle/policies/fixed) levenscyclusbeleid.
 
 
-  Dit geldt voor de volgende edities: toepassingsbeveiliging, Outlook-versie, Professional 9,0, register extensie 2,0, share Manager 1,0, software update 1,0, software-update 2,0, Standard 1,0, Standard 2,0
+  Dit is van toepassing op de volgende edities: Application Security, Outlook Edition, Professional 9.0, Registry Extension 2.0, Share Manager 1.0, Software Update 1.0, Software Update 2.0, Standard 1.0, Standard 2.0
 
 products:
 - windows
@@ -27,4 +27,4 @@ releases:
 - version: Original Release
   startDate: 01/01/2007
   endDate: 01/12/2010
-content: "\n\n> [!NOTE]\n> Ondersteuning voor dit product is onderworpen aan de voorwaarden van zijn aanschaf.\n\n## <a name=\"editions\"></a>Edities \n* Toepassingsbeveiliging\n* Outlook-versie\n* Professionele 9,0\n* Register extensie 2,0\n* Share Manager 1,0\n* Software-update 1,0\n* Software-update 2,0\n* Standaard 1,0\n* Standaard 2,0"
+content: "\n\n> [!NOTE]\n> Ondersteuning voor dit product is onderworpen aan de voorwaarden van zijn aanschaf.\n\n## <a name=\"editions\"></a>Edities \n* Application Security\n* Outlook-editie\n* Professional 9.0\n* Registry Extension 2.0\n* Share Manager 1.0\n* Software Update 1.0\n* Software Update 2.0\n* Standard 1.0\n* Standard 2.0"
