--- a/lifecycle-data/products/powerpoint-2016.yml
+++ b/lifecycle-data/products/powerpoint-2016.yml
@@ -1,18 +1,18 @@
 ### YamlMime:Lifecycle
 metadata:
   title: PowerPoint 2016
-  description: PowerPoint 2016 volgt het vaste levenscyclus beleid.
+  description: PowerPoint 2016 volgt het vaste levenscyclusbeleid.
   ms.date: 09/01/2020
   keywords: Standard
   ms.openlocfilehash: 04955ff5fa53a1585bf767879b4f0882dda8c613
   ms.sourcegitcommit: af46dd09ccdabd80dcc49d2cd930cefa0b1ab8a6
-  ms.translationtype: MT
+  ms.translationtype: HT
   ms.contentlocale: nl-NL
   ms.lasthandoff: 09/01/2020
   ms.locfileid: "926749"
 name: PowerPoint 2016
 summary: >+
-  PowerPoint 2016 volgt het [vaste](/lifecycle/policies/fixed) levenscyclus beleid.
+  PowerPoint 2016 volgt het [vaste](/lifecycle/policies/fixed) levenscyclusbeleid.
 
 
   Dit is van toepassing op de volgende edities: Standard
