--- a/lifecycle-data/products/powerpoint-2019.yml
+++ b/lifecycle-data/products/powerpoint-2019.yml
@@ -1,18 +1,18 @@
 ### YamlMime:Lifecycle
 metadata:
   title: PowerPoint 2019
-  description: PowerPoint 2019 volgt het vaste levenscyclus beleid.
+  description: PowerPoint 2019 volgt het vaste levenscyclusbeleid.
   ms.date: 09/01/2020
   keywords: Standard
   ms.openlocfilehash: f28e4fd798e20b6f170da86bfa12a50e59865c29
   ms.sourcegitcommit: af46dd09ccdabd80dcc49d2cd930cefa0b1ab8a6
-  ms.translationtype: MT
+  ms.translationtype: HT
   ms.contentlocale: nl-NL
   ms.lasthandoff: 09/01/2020
   ms.locfileid: "926860"
 name: PowerPoint 2019
 summary: >+
-  PowerPoint 2019 volgt het [vaste](/lifecycle/policies/fixed) levenscyclus beleid.
+  PowerPoint 2019 volgt het [vaste](/lifecycle/policies/fixed) levenscyclusbeleid.
 
 
   Dit is van toepassing op de volgende edities: Standard
