--- a/lifecycle-data/products/project-2013.yml
+++ b/lifecycle-data/products/project-2013.yml
@@ -1,18 +1,18 @@
 ### YamlMime:Lifecycle
 metadata:
   title: Project 2013
-  description: Project 2013 volgt het vaste levenscyclus beleid.
+  description: Project 2013 volgt het vaste levenscyclusbeleid.
   ms.date: 09/01/2020
   keywords: Professional,Standard
   ms.openlocfilehash: a0c7b1031c25aa1c64ea6ba3c0176ec83e4071b6
   ms.sourcegitcommit: af46dd09ccdabd80dcc49d2cd930cefa0b1ab8a6
-  ms.translationtype: MT
+  ms.translationtype: HT
   ms.contentlocale: nl-NL
   ms.lasthandoff: 09/01/2020
   ms.locfileid: "926453"
 name: Project 2013
 summary: >+
-  Project 2013 volgt het [vaste](/lifecycle/policies/fixed) levenscyclus beleid.
+  Project 2013 volgt het [vaste](/lifecycle/policies/fixed) levenscyclusbeleid.
 
 
   Dit is van toepassing op de volgende edities: Professional, Standard
