--- a/lifecycle-data/products/project-2016.yml
+++ b/lifecycle-data/products/project-2016.yml
@@ -1,18 +1,18 @@
 ### YamlMime:Lifecycle
 metadata:
   title: Project 2016
-  description: Project 2016 volgt het vaste levenscyclus beleid.
+  description: Project 2016 volgt het vaste levenscyclusbeleid.
   ms.date: 09/01/2020
   keywords: Professional,Standard
   ms.openlocfilehash: 5d4110f5d6f16efd84205e08dc375cdd839c3220
   ms.sourcegitcommit: af46dd09ccdabd80dcc49d2cd930cefa0b1ab8a6
-  ms.translationtype: MT
+  ms.translationtype: HT
   ms.contentlocale: nl-NL
   ms.lasthandoff: 09/01/2020
   ms.locfileid: "926527"
 name: Project 2016
 summary: >+
-  Project 2016 volgt het [vaste](/lifecycle/policies/fixed) levenscyclus beleid.
+  Project 2016 volgt het [vaste](/lifecycle/policies/fixed) levenscyclusbeleid.
 
 
   Dit is van toepassing op de volgende edities: Professional, Standard
