--- a/lifecycle-data/products/project-2019.yml
+++ b/lifecycle-data/products/project-2019.yml
@@ -1,18 +1,18 @@
 ### YamlMime:Lifecycle
 metadata:
   title: Project 2019
-  description: Project 2019 volgt het vaste levenscyclus beleid.
+  description: Project 2019 volgt het vaste levenscyclusbeleid.
   ms.date: 09/01/2020
   keywords: Professional,Standard
   ms.openlocfilehash: 9507d81cd2cf3bd70765d9fa9f51806cf7c5d16b
   ms.sourcegitcommit: af46dd09ccdabd80dcc49d2cd930cefa0b1ab8a6
-  ms.translationtype: MT
+  ms.translationtype: HT
   ms.contentlocale: nl-NL
   ms.lasthandoff: 09/01/2020
   ms.locfileid: "926342"
 name: Project 2019
 summary: >+
-  Project 2019 volgt het [vaste](/lifecycle/policies/fixed) levenscyclus beleid.
+  Project 2019 volgt het [vaste](/lifecycle/policies/fixed) levenscyclusbeleid.
 
 
   Dit is van toepassing op de volgende edities: Professional, Standard
