--- a/lifecycle-data/products/publisher-2016.yml
+++ b/lifecycle-data/products/publisher-2016.yml
@@ -1,18 +1,18 @@
 ### YamlMime:Lifecycle
 metadata:
   title: Publisher 2016
-  description: Publisher 2016 volgt het vaste levenscyclus beleid.
+  description: Publisher 2016 volgt het vaste levenscyclusbeleid.
   ms.date: 09/01/2020
   keywords: Standard
   ms.openlocfilehash: da399cd636aa0fe84a000ab93878bcf08c27f446
   ms.sourcegitcommit: af46dd09ccdabd80dcc49d2cd930cefa0b1ab8a6
-  ms.translationtype: MT
+  ms.translationtype: HT
   ms.contentlocale: nl-NL
   ms.lasthandoff: 09/01/2020
   ms.locfileid: "926120"
 name: Publisher 2016
 summary: >+
-  Publisher 2016 volgt het [vaste](/lifecycle/policies/fixed) levenscyclus beleid.
+  Publisher 2016 volgt het [vaste](/lifecycle/policies/fixed) levenscyclusbeleid.
 
 
   Dit is van toepassing op de volgende edities: Standard
