--- a/lifecycle-data/products/virtual-server-2005.yml
+++ b/lifecycle-data/products/virtual-server-2005.yml
@@ -1,21 +1,21 @@
 ### YamlMime:Lifecycle
 metadata:
-  title: Virtuele Server 2005
-  description: Virtuele Server 2005 volgt het vaste levenscyclus beleid.
+  title: Virtual Server 2005
+  description: Virtual Server 2005 volgt het vaste levenscyclusbeleid.
   ms.date: 09/01/2020
   keywords: Enterprise,Management Pack,Standard
   ms.openlocfilehash: 3a975f558d61c598e0b825d9402467398b348e82
   ms.sourcegitcommit: af46dd09ccdabd80dcc49d2cd930cefa0b1ab8a6
-  ms.translationtype: MT
+  ms.translationtype: HT
   ms.contentlocale: nl-NL
   ms.lasthandoff: 09/01/2020
   ms.locfileid: "937886"
-name: Virtuele Server 2005
+name: Virtual Server 2005
 summary: >+
-  Virtuele Server 2005 volgt het [vaste](/lifecycle/policies/fixed) levenscyclus beleid.
+  Virtual Server 2005 volgt het [vaste](/lifecycle/policies/fixed) levenscyclusbeleid.
 
 
-  Dit geldt voor de volgende edities: Enterprise, Management Pack, Standard
+  Dit is van toepassing op de volgende edities: Enterprise, Management Pack, Standard
 
 products:
 - windows
