--- a/lifecycle-data/products/visio-2010.yml
+++ b/lifecycle-data/products/visio-2010.yml
@@ -1,21 +1,21 @@
 ### YamlMime:Lifecycle
 metadata:
   title: Visio 2010
-  description: Visio 2010 volgt het vaste levenscyclus beleid.
+  description: Visio 2010 volgt het vaste levenscyclusbeleid.
   ms.date: 09/01/2020
   keywords: Premium,Professional,Standard
   ms.openlocfilehash: c716322b214c44ce9cfe9f102d9260a24f2d0877
   ms.sourcegitcommit: af46dd09ccdabd80dcc49d2cd930cefa0b1ab8a6
-  ms.translationtype: MT
+  ms.translationtype: HT
   ms.contentlocale: nl-NL
   ms.lasthandoff: 09/01/2020
   ms.locfileid: "937849"
 name: Visio 2010
 summary: >+
-  Visio 2010 volgt het [vaste](/lifecycle/policies/fixed) levenscyclus beleid.
+  Visio 2010 volgt het [vaste](/lifecycle/policies/fixed) levenscyclusbeleid.
 
 
-  Dit geldt voor de volgende edities: Premium, Professional, Standard
+  Dit is van toepassing op de volgende edities: Premium, Professional, Standard
 
 products:
 - office
