--- a/lifecycle-data/products/visio-2016.yml
+++ b/lifecycle-data/products/visio-2016.yml
@@ -1,18 +1,18 @@
 ### YamlMime:Lifecycle
 metadata:
   title: Visio 2016
-  description: Visio 2016 volgt het vaste levenscyclus beleid.
+  description: Visio 2016 volgt het vaste levenscyclusbeleid.
   ms.date: 09/01/2020
   keywords: Professional,Standard
   ms.openlocfilehash: ad39988786cefb44a3e6ff8aa66363673d590a7e
   ms.sourcegitcommit: af46dd09ccdabd80dcc49d2cd930cefa0b1ab8a6
-  ms.translationtype: MT
+  ms.translationtype: HT
   ms.contentlocale: nl-NL
   ms.lasthandoff: 09/01/2020
   ms.locfileid: "937775"
 name: Visio 2016
 summary: >+
-  Visio 2016 volgt het [vaste](/lifecycle/policies/fixed) levenscyclus beleid.
+  Visio 2016 volgt het [vaste](/lifecycle/policies/fixed) levenscyclusbeleid.
 
 
   Dit is van toepassing op de volgende edities: Professional, Standard
