--- a/lifecycle-data/products/visio-2019.yml
+++ b/lifecycle-data/products/visio-2019.yml
@@ -1,18 +1,18 @@
 ### YamlMime:Lifecycle
 metadata:
   title: Visio 2019
-  description: Visio 2019 volgt het vaste levenscyclus beleid.
+  description: Visio 2019 volgt het vaste levenscyclusbeleid.
   ms.date: 09/01/2020
   keywords: Professional,Standard
   ms.openlocfilehash: 354844a703531046efb29743ac16e5f5f02da2d1
   ms.sourcegitcommit: af46dd09ccdabd80dcc49d2cd930cefa0b1ab8a6
-  ms.translationtype: MT
+  ms.translationtype: HT
   ms.contentlocale: nl-NL
   ms.lasthandoff: 09/01/2020
   ms.locfileid: "937738"
 name: Visio 2019
 summary: >+
-  Visio 2019 volgt het [vaste](/lifecycle/policies/fixed) levenscyclus beleid.
+  Visio 2019 volgt het [vaste](/lifecycle/policies/fixed) levenscyclusbeleid.
 
 
   Dit is van toepassing op de volgende edities: Professional, Standard
