--- a/lifecycle-data/products/word-2019.yml
+++ b/lifecycle-data/products/word-2019.yml
@@ -1,18 +1,18 @@
 ### YamlMime:Lifecycle
 metadata:
   title: Word 2019
-  description: Word 2019 volgt het vaste levenscyclus beleid.
+  description: Word 2019 volgt het vaste levenscyclusbeleid.
   ms.date: 09/01/2020
   keywords: Standard
   ms.openlocfilehash: 089324dba94c7c70826bb50b980073861ba17959
   ms.sourcegitcommit: af46dd09ccdabd80dcc49d2cd930cefa0b1ab8a6
-  ms.translationtype: MT
+  ms.translationtype: HT
   ms.contentlocale: nl-NL
   ms.lasthandoff: 09/01/2020
   ms.locfileid: "938589"
 name: Word 2019
 summary: >+
-  Word 2019 volgt het [vaste](/lifecycle/policies/fixed) levenscyclus beleid.
+  Word 2019 volgt het [vaste](/lifecycle/policies/fixed) levenscyclusbeleid.
 
 
   Dit is van toepassing op de volgende edities: Standard
