--- a/lifecycle-data/products/access-2013.yml
+++ b/lifecycle-data/products/access-2013.yml
@@ -1,18 +1,18 @@
 ### YamlMime:Lifecycle
 metadata:
   title: Access 2013
-  description: Access 2013 volgt het vaste levenscyclus beleid.
+  description: Access 2013 volgt het vaste levenscyclusbeleid.
   ms.date: 09/01/2020
   keywords: Standard
   ms.openlocfilehash: e58d73b8c3d5757d5cddded295cc06f773df46d8
   ms.sourcegitcommit: af46dd09ccdabd80dcc49d2cd930cefa0b1ab8a6
-  ms.translationtype: MT
+  ms.translationtype: HT
   ms.contentlocale: nl-NL
   ms.lasthandoff: 09/01/2020
   ms.locfileid: "940032"
 name: Access 2013
 summary: >+
-  Access 2013 volgt het [vaste](/lifecycle/policies/fixed) levenscyclus beleid.
+  Access 2013 volgt het [vaste](/lifecycle/policies/fixed) levenscyclusbeleid.
 
 
   Dit is van toepassing op de volgende edities: Standard
