--- a/lifecycle-data/products/access-2016.yml
+++ b/lifecycle-data/products/access-2016.yml
@@ -1,18 +1,18 @@
 ### YamlMime:Lifecycle
 metadata:
   title: Access 2016
-  description: Access 2016 volgt het vaste levenscyclus beleid.
+  description: Access 2016 volgt het vaste levenscyclusbeleid.
   ms.date: 09/01/2020
   keywords: Standard
   ms.openlocfilehash: 98a71f2b9f489d7d1f30a0177e4389ea9c4f5897
   ms.sourcegitcommit: af46dd09ccdabd80dcc49d2cd930cefa0b1ab8a6
-  ms.translationtype: MT
+  ms.translationtype: HT
   ms.contentlocale: nl-NL
   ms.lasthandoff: 09/01/2020
   ms.locfileid: "940106"
 name: Access 2016
 summary: >+
-  Access 2016 volgt het [vaste](/lifecycle/policies/fixed) levenscyclus beleid.
+  Access 2016 volgt het [vaste](/lifecycle/policies/fixed) levenscyclusbeleid.
 
 
   Dit is van toepassing op de volgende edities: Standard
