--- a/lifecycle-data/products/access-2019.yml
+++ b/lifecycle-data/products/access-2019.yml
@@ -1,18 +1,18 @@
 ### YamlMime:Lifecycle
 metadata:
   title: Access 2019
-  description: Access 2019 volgt het vaste levenscyclus beleid.
+  description: Access 2019 volgt het vaste levenscyclusbeleid.
   ms.date: 09/01/2020
   keywords: Standard
   ms.openlocfilehash: 9cb6474fa4cc37df413fc8db00203768b06973a0
   ms.sourcegitcommit: af46dd09ccdabd80dcc49d2cd930cefa0b1ab8a6
-  ms.translationtype: MT
+  ms.translationtype: HT
   ms.contentlocale: nl-NL
   ms.lasthandoff: 09/01/2020
   ms.locfileid: "940143"
 name: Access 2019
 summary: >+
-  Access 2019 volgt het [vaste](/lifecycle/policies/fixed) levenscyclus beleid.
+  Access 2019 volgt het [vaste](/lifecycle/policies/fixed) levenscyclusbeleid.
 
 
   Dit is van toepassing op de volgende edities: Standard
