--- a/lifecycle-data/products/advanced-threat-analytics-1x.yml
+++ b/lifecycle-data/products/advanced-threat-analytics-1x.yml
@@ -1,18 +1,18 @@
 ### YamlMime:Lifecycle
 metadata:
-  title: Advanced Threat Analytics 1. X
-  description: Advanced Threat Analytics 1. X volgt het vaste levenscyclus beleid.
+  title: Advanced Threat Analytics 1.X
+  description: Advanced Threat Analytics 1.X volgt het vaste levenscyclusbeleid.
   ms.date: 09/10/2020
   keywords: 
   ms.openlocfilehash: 63d72a1510958edf2f7800c4a102fb587cbb8750
   ms.sourcegitcommit: 5c618c870f05989d24ebd3a61d98ce2302e85d3b
-  ms.translationtype: MT
+  ms.translationtype: HT
   ms.contentlocale: nl-NL
   ms.lasthandoff: 09/10/2020
   ms.locfileid: "1002629"
-name: Advanced Threat Analytics 1. X
+name: Advanced Threat Analytics 1.X
 summary: >+
-  Advanced Threat Analytics 1. X volgt het [vaste](/lifecycle/policies/fixed) levenscyclus beleid.
+  Advanced Threat Analytics 1.X volgt het [vaste](/lifecycle/policies/fixed) levenscyclusbeleid.
 
 
 products:
@@ -26,4 +26,4 @@ releases:
 - version: Original Release
   startDate: 11/25/2015
   endDate: 01/13/2026
-content: "\n## <a name=\"links\"></a>Koppelingen \n* [Richtlijnen voor geavanceerde Threat Analytics-Servicing](/advanced-threat-analytics/understand-explore/ata-versions)\n\n> [!NOTE]\n> Updates zijn cumulatief, waarbij elke update op alle updates werd gebaseerd. Een apparaat moet de meest recente update installeren om ondersteuning te blijvenen."
+content: "\n## <a name=\"links\"></a>Koppelingen \n* [Servicerichtlijnen voor Advanced Threat Analytics](/advanced-threat-analytics/understand-explore/ata-versions)\n\n> [!NOTE]\n> Updates zijn cumulatief, waarbij elke update is gebaseerd op alle updates die eraan vooraf gingen. Op een apparaat moet de nieuwste update geïnstalleerd zijn om ondersteuning te blijven ontvangen."
