--- a/lifecycle-data/products/groove-31.yml
+++ b/lifecycle-data/products/groove-31.yml
@@ -1,21 +1,21 @@
 ### YamlMime:Lifecycle
 metadata:
-  title: Groove 3,1
-  description: Groove 3,1 volgt het vaste levenscyclus beleid.
+  title: Groove 3.1
+  description: Groove 3.1 volgt het vaste levenscyclusbeleid.
   ms.date: 09/03/2020
   keywords: Enterprise Backup Service,Enterprise Data Bridge,Enterprise Relay Server,Hosted Management Services,Hosted Relay Services,Office Project,Virtual Office File Sharing,Virtual Office Professional,Web Services Development Kit
   ms.openlocfilehash: 19dab25c567ea1b34565a675dffe9c99c6c21ba5
   ms.sourcegitcommit: 59291eb409a67c9e002fd0e45e37aca76d599df0
-  ms.translationtype: MT
+  ms.translationtype: HT
   ms.contentlocale: nl-NL
   ms.lasthandoff: 09/03/2020
   ms.locfileid: "950827"
-name: Groove 3,1
+name: Groove 3.1
 summary: >+
-  Groove 3,1 volgt het [vaste](/lifecycle/policies/fixed) levenscyclus beleid.
+  Groove 3.1 volgt het [vaste](/lifecycle/policies/fixed) levenscyclusbeleid.
 
 
-  Dit geldt voor de volgende edities: Enterprise Backup Service, Enterprise Data Bridge, Enterprise relay server, hosted Management Services, hosted relay Services, Office Project, Virtual Office bestands sharing, Virtual Office Professional, Web Services Development Kit
+  Dit is van toepassing op de volgende edities: Enterprise Backup Service, Enterprise Data Bridge, Enterprise Relay Server, Hosted Management Services, Hosted Relay Services, Office Project, Virtual Office File Sharing, Virtual Office Professional, Web Services Development Kit
 
 products:
 - office
@@ -27,4 +27,4 @@ releases:
 - version: Original Release
   startDate: 07/01/2004
   endDate: 04/16/2010
-content: "\n\n\n## <a name=\"editions\"></a>Edities \n* Enterprise Backup-Service\n* Enterprise Data Bridge\n* Enterprise relay-server\n* Gehoste beheer Services\n* Gehoste relay-Services\n* Office Project\n* Virtuele Office-bestanden delen\n* Virtuele Office Professional\n* Web Services Development Kit"
+content: "\n\n\n## <a name=\"editions\"></a>Edities \n* Enterprise Back-upservice\n* Enterprise Data Bridge\n* Enterprise Relay Server\n* Hosted Management Services\n* Hosted Relay Services\n* Office Project\n* Virtual Office-bestanden delen\n* Virtual Office Professional\n* Web Services Development Kit"
