--- a/lifecycle-data/products/project-server-2013.yml
+++ b/lifecycle-data/products/project-server-2013.yml
@@ -1,18 +1,18 @@
 ### YamlMime:Lifecycle
 metadata:
   title: Project Server 2013
-  description: Project Server 2013 volgt het vaste levenscyclus beleid.
+  description: Project Server 2013 volgt het vaste levenscyclusbeleid.
   ms.date: 09/02/2020
   keywords: ''
   ms.openlocfilehash: b7ac954af370c4e147b0cb471f9233685f438a25
   ms.sourcegitcommit: 37b80a1b6fcda4dc6147d99a362a75b884d08a51
-  ms.translationtype: MT
+  ms.translationtype: HT
   ms.contentlocale: nl-NL
   ms.lasthandoff: 09/02/2020
   ms.locfileid: "941703"
 name: Project Server 2013
 summary: >+
-  Project Server 2013 volgt het [vaste](/lifecycle/policies/fixed) levenscyclus beleid.
+  Project Server 2013 volgt het [vaste](/lifecycle/policies/fixed) levenscyclusbeleid.
 
 
 products:
@@ -29,4 +29,4 @@ releases:
 - version: Original Release
   startDate: 01/09/2013
   endDate: 04/14/2015
-content: "\n## <a name=\"links\"></a>Koppelingen \n* [Servicepackbeleid](/lifecycle/policies/fixed#service-packs)\n\n> [!NOTE]\n> Zie documentatie voor [product](https://docs.microsoft.com/project/project-server-2013-and-2016) en [ontwikkelaars](https://developer.microsoft.com/project/docs) ."
+content: "\n## <a name=\"links\"></a>Koppelingen \n* [Servicepackbeleid](/lifecycle/policies/fixed#service-packs)\n\n> [!NOTE]\n> Raadpleeg [product-](https://docs.microsoft.com/project/project-server-2013-and-2016) en [ontwikkelaars](https://developer.microsoft.com/project/docs) documentatie."
