--- a/lifecycle-data/products/project-server-2019.yml
+++ b/lifecycle-data/products/project-server-2019.yml
@@ -1,18 +1,18 @@
 ### YamlMime:Lifecycle
 metadata:
   title: Project Server 2019
-  description: Project Server 2019 volgt het vaste levenscyclus beleid.
+  description: Project Server 2019 volgt het vaste levenscyclusbeleid.
   ms.date: 09/02/2020
   keywords: ''
   ms.openlocfilehash: a6d1929104c2e7fa0172f1b3208ce0a0022bc160
   ms.sourcegitcommit: 37b80a1b6fcda4dc6147d99a362a75b884d08a51
-  ms.translationtype: MT
+  ms.translationtype: HT
   ms.contentlocale: nl-NL
   ms.lasthandoff: 09/02/2020
   ms.locfileid: "941406"
 name: Project Server 2019
 summary: >+
-  Project Server 2019 volgt het [vaste](/lifecycle/policies/fixed) levenscyclus beleid.
+  Project Server 2019 volgt het [vaste](/lifecycle/policies/fixed) levenscyclusbeleid.
 
 
 products:
@@ -26,4 +26,4 @@ releases:
 - version: Original Release
   startDate: 10/22/2018
   endDate: 07/14/2026
-content: "\n\n> [!NOTE]\n> Zie documentatie voor [product](https://docs.microsoft.com/project/project-server-2013-and-2016) en [ontwikkelaars](https://developer.microsoft.com/project/docs) ."
+content: "\n\n> [!NOTE]\n> Raadpleeg [product-](https://docs.microsoft.com/project/project-server-2013-and-2016) en [ontwikkelaars](https://developer.microsoft.com/project/docs) documentatie."
