--- a/lifecycle-data/products/sharepoint-foundation-2013.yml
+++ b/lifecycle-data/products/sharepoint-foundation-2013.yml
@@ -1,18 +1,18 @@
 ### YamlMime:Lifecycle
 metadata:
   title: SharePoint Foundation 2013
-  description: SharePoint Foundation 2013 volgt het vaste levenscyclus beleid.
+  description: SharePoint Foundation 2013 volgt het vaste levenscyclusbeleid.
   ms.date: 09/01/2020
   keywords: ''
   ms.openlocfilehash: f3241162e2d2a4953850015a7b1625b07adfbcbf
   ms.sourcegitcommit: 81b08c37762fa90d8258fe5a26c257089bcc981b
-  ms.translationtype: MT
+  ms.translationtype: HT
   ms.contentlocale: nl-NL
   ms.lasthandoff: 09/01/2020
   ms.locfileid: "941071"
 name: SharePoint Foundation 2013
 summary: >+
-  SharePoint Foundation 2013 volgt het [vaste](/lifecycle/policies/fixed) levenscyclus beleid.
+  SharePoint Foundation 2013 volgt het [vaste](/lifecycle/policies/fixed) levenscyclusbeleid.
 
 
 products:
@@ -29,4 +29,4 @@ releases:
 - version: Original Release
   startDate: 01/09/2013
   endDate: 04/14/2015
-content: "\n## <a name=\"links\"></a>Koppelingen \n* [Microsoft SharePoint Foundation 2013 Developer Documentation](/sharepoint/dev)\n* [Productdocumentatie voor Microsoft SharePoint Foundation 2013](/sharepoint/sharepoint-server)"
+content: "\n## <a name=\"links\"></a>Koppelingen \n* [SharePoint Foundation 2013-documentatie voor ontwikkelaars](/sharepoint/dev)\n* [SharePoint Foundation 2013-productdocumentatie](/sharepoint/sharepoint-server)"
