--- a/lifecycle-data/products/sharepoint-server-2019.yml
+++ b/lifecycle-data/products/sharepoint-server-2019.yml
@@ -1,18 +1,18 @@
 ### YamlMime:Lifecycle
 metadata:
   title: SharePoint Server 2019
-  description: SharePoint Server 2019 volgt het vaste levenscyclus beleid.
+  description: SharePoint Server 2019 volgt het vaste levenscyclusbeleid.
   ms.date: 09/01/2020
   keywords: ''
   ms.openlocfilehash: 04aeff151809d56448eda49c96441651a9675171
   ms.sourcegitcommit: 37b80a1b6fcda4dc6147d99a362a75b884d08a51
-  ms.translationtype: MT
+  ms.translationtype: HT
   ms.contentlocale: nl-NL
   ms.lasthandoff: 09/02/2020
   ms.locfileid: "941665"
 name: SharePoint Server 2019
 summary: >+
-  SharePoint Server 2019 volgt het [vaste](/lifecycle/policies/fixed) levenscyclus beleid.
+  SharePoint Server 2019 volgt het [vaste](/lifecycle/policies/fixed) levenscyclusbeleid.
 
 
 products:
@@ -26,4 +26,4 @@ releases:
 - version: Original Release
   startDate: 10/22/2018
   endDate: 07/14/2026
-content: "\n## <a name=\"links\"></a>Koppelingen \n* [Onderhoudsinformatie](/sharepoint/product-servicing-policy/updated-product-servicing-policy-for-sharepoint-2019)\n\n> [!NOTE]\n> Zie documentatie voor [product](https://docs.microsoft.com/sharepoint/sharepoint-server) en [ontwikkelaars](https://developer.microsoft.com/sharepoint/docs)"
+content: "\n## <a name=\"links\"></a>Koppelingen \n* [Onderhoudsinformatie](/sharepoint/product-servicing-policy/updated-product-servicing-policy-for-sharepoint-2019)\n\n> [!NOTE]\n> Raadpleeg de [product-](https://docs.microsoft.com/sharepoint/sharepoint-server) en [ontwikkelaars](https://developer.microsoft.com/sharepoint/docs) documentatie."
