--- a/lifecycle-data/products/windows-phone-8.yml
+++ b/lifecycle-data/products/windows-phone-8.yml
@@ -1,17 +1,17 @@
 ### YamlMime:Lifecycle
 metadata:
   title: Windows Phone 8
-  description: Windows Phone 8 volgt het vaste levenscyclus beleid.
+  description: Windows Phone 8 volgt het vaste levenscyclusbeleid.
   ms.date: 08/19/2020
   ms.openlocfilehash: 414496ab55aa39619921de70d0df779cc4403a50
   ms.sourcegitcommit: 37ac01a1d5492bb2bf54cbd018ea34074db8c998
-  ms.translationtype: MT
+  ms.translationtype: HT
   ms.contentlocale: nl-NL
   ms.lasthandoff: 09/01/2020
   ms.locfileid: "940815"
 name: Windows Phone 8
 summary: >+
-  Windows Phone 8 volgt het [vaste](/lifecycle/policies/fixed) levenscyclus beleid.
+  Windows Phone 8 volgt het [vaste](/lifecycle/policies/fixed) levenscyclusbeleid.
 
 
 products:
