--- a/lifecycle-data/products/word-2013.yml
+++ b/lifecycle-data/products/word-2013.yml
@@ -1,18 +1,18 @@
 ### YamlMime:Lifecycle
 metadata:
   title: Word 2013
-  description: Word 2013 volgt het vaste levenscyclus beleid.
+  description: Word 2013 volgt het vaste levenscyclusbeleid.
   ms.date: 09/01/2020
   keywords: Standard
   ms.openlocfilehash: b08705b30333f7f619339b95da3aafc1d047f7de
   ms.sourcegitcommit: af46dd09ccdabd80dcc49d2cd930cefa0b1ab8a6
-  ms.translationtype: MT
+  ms.translationtype: HT
   ms.contentlocale: nl-NL
   ms.lasthandoff: 09/01/2020
   ms.locfileid: "938663"
 name: Word 2013
 summary: >+
-  Word 2013 volgt het [vaste](/lifecycle/policies/fixed) levenscyclus beleid.
+  Word 2013 volgt het [vaste](/lifecycle/policies/fixed) levenscyclusbeleid.
 
 
   Dit is van toepassing op de volgende edities: Standard
