--- a/lifecycle-data/products/word-2016.yml
+++ b/lifecycle-data/products/word-2016.yml
@@ -1,18 +1,18 @@
 ### YamlMime:Lifecycle
 metadata:
   title: Word 2016
-  description: Word 2016 volgt het vaste levenscyclus beleid.
+  description: Word 2016 volgt het vaste levenscyclusbeleid.
   ms.date: 09/01/2020
   keywords: Standard
   ms.openlocfilehash: 65d33fb18d97798011013ff25eedc82583075734
   ms.sourcegitcommit: af46dd09ccdabd80dcc49d2cd930cefa0b1ab8a6
-  ms.translationtype: MT
+  ms.translationtype: HT
   ms.contentlocale: nl-NL
   ms.lasthandoff: 09/01/2020
   ms.locfileid: "938626"
 name: Word 2016
 summary: >+
-  Word 2016 volgt het [vaste](/lifecycle/policies/fixed) levenscyclus beleid.
+  Word 2016 volgt het [vaste](/lifecycle/policies/fixed) levenscyclusbeleid.
 
 
   Dit is van toepassing op de volgende edities: Standard
